--- a/Prevu.Localization/Properties/Resources.ar.resx
+++ b/Prevu.Localization/Properties/Resources.ar.resx
@@ -1668,4 +1668,472 @@
   <data name="NAME" xml:space="preserve">
     <value>اسم</value>
   </data>
+  <data name="PRESSURE TRANSDUCER NOT OK" xml:space="preserve">
+    <value>محول الضغط ليس على ما يرام</value>
+  </data>
+  <data name="MINIMUM FLOWRATE" xml:space="preserve">
+    <value>الحد الأدنى من معدل التدفق</value>
+  </data>
+  <data name="FLOWRATE TRANSDUCER NOT OK" xml:space="preserve">
+    <value>محول تدفق الطاقة ليس على ما يرام</value>
+  </data>
+  <data name="LEVEL NOT OK FOR PROCESS" xml:space="preserve">
+    <value>المستوى ليس جيدًا للعملية</value>
+  </data>
+  <data name="SENSOR DISABLED" xml:space="preserve">
+    <value>جهاز الاستشعار معطل</value>
+  </data>
+  <data name="EXTERNAL PLANT IS NOT OK TO GIVE MATERIAL" xml:space="preserve">
+    <value>المصنع الخارجي غير مناسب لإعطاء المواد</value>
+  </data>
+  <data name="DOWNSTREAM NOT OK TO RECEIVE MATERIAL" xml:space="preserve">
+    <value>المصب ليس موافقًا لاستلام المواد</value>
+  </data>
+  <data name="MAINTENANCE REFERENCE" xml:space="preserve">
+    <value>مرجع الصيانة</value>
+  </data>
+  <data name="MAXIMUM PRESSURE" xml:space="preserve">
+    <value>أقصى ضغط</value>
+  </data>
+  <data name="MINIMUM PRESSURE" xml:space="preserve">
+    <value>أدنى ضغط</value>
+  </data>
+  <data name="PROPORTIONAL GAIN" xml:space="preserve">
+    <value>الربح النسبي</value>
+  </data>
+  <data name="INTEGRAL SAMPLE TIME" xml:space="preserve">
+    <value>وقت العينة المتكامل</value>
+  </data>
+  <data name="INTEGRAL GAIN (0=DISABLE INTEGRAL)" xml:space="preserve">
+    <value>ربح متكامل (0 = تعطيل متكامل)</value>
+  </data>
+  <data name="MINIMUM OUTPUT OF REGULATION" xml:space="preserve">
+    <value>الحد الأدنى من مخرجات التنظيم</value>
+  </data>
+  <data name="MAXIMUM CONTRIBUTION OF PROPORTIONAL" xml:space="preserve">
+    <value>أقصى مساهمة متناسبة</value>
+  </data>
+  <data name="MAXIMUM CONTRIBUTION OF INTEGRAL" xml:space="preserve">
+    <value>الحد الأقصى من مساهمة التكامل</value>
+  </data>
+  <data name="DELTA OVER SETPOINT TO STOP HEATING" xml:space="preserve">
+    <value>Delta Over Setpoint لإيقاف التسخين</value>
+  </data>
+  <data name="DELTA BELOW SETPOINT TO MAXIMIZE HEATING" xml:space="preserve">
+    <value>دلتا أسفل نقطة الضبط لزيادة التسخين</value>
+  </data>
+  <data name="POSITION IN PRODUCTION (IN CONSTANT MODE)" xml:space="preserve">
+    <value>الموقع في الإنتاج (في الوضع الثابت)</value>
+  </data>
+  <data name="POSITION IN MAINTENANCE" xml:space="preserve">
+    <value>الموقف في الصيانة</value>
+  </data>
+  <data name="MINIMUM FLOWRATE FOR ALARM" xml:space="preserve">
+    <value>الحد الأدنى من معدل التدفق للتنبيه</value>
+  </data>
+  <data name="ACTUAL CONCENTRATION" xml:space="preserve">
+    <value>التركيز الفعلي</value>
+  </data>
+  <data name="MAXIMUM CONCENTRATION" xml:space="preserve">
+    <value>التركيز الأقصى</value>
+  </data>
+  <data name="HIGH CONCENTRATION WARNING" xml:space="preserve">
+    <value>تحذير من ارتفاع التركيز</value>
+  </data>
+  <data name="LOW CONCENTRATION WARNING" xml:space="preserve">
+    <value>تحذير من انخفاض التركيز</value>
+  </data>
+  <data name="MINIMUM CONCENTRATION" xml:space="preserve">
+    <value>الحد الأدنى من التركيز</value>
+  </data>
+  <data name="TANK DISCHARGE TIME" xml:space="preserve">
+    <value>وقت تفريغ الخزان</value>
+  </data>
+  <data name="TANK HEIGHT" xml:space="preserve">
+    <value>ارتفاع الخزان</value>
+  </data>
+  <data name="MAXIMUM FILLING TIME (0 = CONTROL BYPASS)" xml:space="preserve">
+    <value>الحد الأقصى لوقت الملء (0 = تجاوز التحكم)</value>
+  </data>
+  <data name="SEMIAUTO PUMPING TIME" xml:space="preserve">
+    <value>وقت الضخ شبه التلقائي</value>
+  </data>
+  <data name="DISCHARGE" xml:space="preserve">
+    <value>تسريح</value>
+  </data>
+  <data name="MAXIMUM PAUSE TIME (0=DISCHARGE DISABLED)" xml:space="preserve">
+    <value>الحد الأقصى لوقت التوقف (0 = تعطيل التفريغ)</value>
+  </data>
+  <data name="MINIMUM PAUSE TIME" xml:space="preserve">
+    <value>الحد الأدنى من وقت التوقف</value>
+  </data>
+  <data name="FULLY CLOSED POSITION DELAY" xml:space="preserve">
+    <value>تأخير المركز المغلق بالكامل</value>
+  </data>
+  <data name="MOTOR STALLED OR SPEED LOSS" xml:space="preserve">
+    <value>توقف المحرك أو فقد السرعة</value>
+  </data>
+  <data name="RESET FAULTS" xml:space="preserve">
+    <value>إعادة تعيين الأخطاء</value>
+  </data>
+  <data name="ACKNOWLEDGED FAULTS" xml:space="preserve">
+    <value>الاعتراف بالأخطاء</value>
+  </data>
+  <data name="PRODUCTION MODE" xml:space="preserve">
+    <value>وضع الإنتاج</value>
+  </data>
+  <data name="MESSAGE" xml:space="preserve">
+    <value>رسالة</value>
+  </data>
+  <data name="(4-20MA)" xml:space="preserve">
+    <value>(4-20ما)</value>
+  </data>
+  <data name="MOTOR MAXIMUM AMPERAGE EXCEEDED (&gt;115% OF NOMINAL AMP FOR 15 SEC)" xml:space="preserve">
+    <value>تم تجاوز الحد الأقصى لتيار المحرك (&gt; 115٪ من الأمبير الاسمي لمدة 15 ثانية)</value>
+  </data>
+  <data name="(1=ENABLED)" xml:space="preserve">
+    <value>(1 = ممكّن)</value>
+  </data>
+  <data name="SIMULATION" xml:space="preserve">
+    <value>محاكاة</value>
+  </data>
+  <data name="WASHING 3" xml:space="preserve">
+    <value>الغسيل 3</value>
+  </data>
+  <data name="START CONDITIONS" xml:space="preserve">
+    <value>شروط البدء</value>
+  </data>
+  <data name="INVERTER IN LOCAL MODE" xml:space="preserve">
+    <value>العاكس في الوضع المحلي</value>
+  </data>
+  <data name="(1=NOT PUSHED)" xml:space="preserve">
+    <value>(1 = لم يتم دفعه)</value>
+  </data>
+  <data name="MOTOR CURRENT OVER MAXIMUM RANGE LIMIT" xml:space="preserve">
+    <value>تيار المحرك فوق الحد الأقصى للمدى</value>
+  </data>
+  <data name="REACTION ARM MECHANICAL OVERLOAD" xml:space="preserve">
+    <value>رد الفعل الميكانيكي الزائد</value>
+  </data>
+  <data name="ESTOP CONTACTORS NOT OK" xml:space="preserve">
+    <value>الموصلات Estop ليس على ما يرام</value>
+  </data>
+  <data name="MOTOR CURRENT TRANSDUCER BROKEN WIRE" xml:space="preserve">
+    <value>سلك محول تيار المحرك المكسور</value>
+  </data>
+  <data name="TARE CALIBRATION NOT POSSIBLE FOR MAXIMUM WEIGHT" xml:space="preserve">
+    <value>المعايرة الفارغة غير ممكنة للحصول على أقصى وزن</value>
+  </data>
+  <data name="WEIGHT TRANSDUCER NOT OK" xml:space="preserve">
+    <value>محول الوزن ليس على ما يرام</value>
+  </data>
+  <data name="MAXIMUM REFILL TIME" xml:space="preserve">
+    <value>أقصى وقت لإعادة التعبئة</value>
+  </data>
+  <data name="MOTOR MINIMUM AMPERAGE NOT REACHED (5% OF NOMINAL AMP)" xml:space="preserve">
+    <value>لم يتم بلوغ الحد الأدنى من شدة التيار (5٪ من الأمبير الاسمي)</value>
+  </data>
+  <data name="SAFETIES NOT OK" xml:space="preserve">
+    <value>الأمان ليس على ما يرام</value>
+  </data>
+  <data name="POSITION OPEN NOT OK" xml:space="preserve">
+    <value>المركز فتح ليس حسنا</value>
+  </data>
+  <data name="POSITION CLOSED NOT OK" xml:space="preserve">
+    <value>المركز مغلق لا بأس به</value>
+  </data>
+  <data name="MOTOR OVERHEAT" xml:space="preserve">
+    <value>ارتفاع درجة حرارة المحرك</value>
+  </data>
+  <data name="CLOSED POSITION NOT OK" xml:space="preserve">
+    <value>موقف مغلق لا بأس به</value>
+  </data>
+  <data name="BOTH VALVES ARE NOT FULLY CLOSED - TANK EMPTIYNG!" xml:space="preserve">
+    <value>كلا الصمامين غير مغلقين بالكامل - تفريغ الخزان!</value>
+  </data>
+  <data name="RETURN VALUE" xml:space="preserve">
+    <value>قيمة الإرجاع</value>
+  </data>
+  <data name="COMMAND" xml:space="preserve">
+    <value>يأمر</value>
+  </data>
+  <data name="DISABLE SENSOR" xml:space="preserve">
+    <value>تعطيل جهاز الاستشعار</value>
+  </data>
+  <data name="DELAY FOR MESSAGE 'NO MATERIAL' (0=NO MESSAGE)" xml:space="preserve">
+    <value>تأخير لرسالة "لا توجد مادة" (0 = لا توجد رسالة)</value>
+  </data>
+  <data name="SET MAXIMUM LEVEL" xml:space="preserve">
+    <value>تعيين المستوى الأقصى</value>
+  </data>
+  <data name="SET MINIMUM LEVEL" xml:space="preserve">
+    <value>تعيين المستوى الأدنى</value>
+  </data>
+  <data name="WATER TO COMPENSATE WITH A FULL BATCH" xml:space="preserve">
+    <value>الماء لتعويض دفعة كاملة</value>
+  </data>
+  <data name="CAUSTIC - TARGET" xml:space="preserve">
+    <value>الكاوية - الهدف</value>
+  </data>
+  <data name="LATEST ADDITION" xml:space="preserve">
+    <value>أحدث إضافة</value>
+  </data>
+  <data name="GAP WATER - TARGET" xml:space="preserve">
+    <value>فجوة المياه - الهدف</value>
+  </data>
+  <data name="DETERGENT - TARGET" xml:space="preserve">
+    <value>المنظفات - الهدف</value>
+  </data>
+  <data name="FINAL WATER LATEST ADDITION" xml:space="preserve">
+    <value>آخر إضافة للمياه</value>
+  </data>
+  <data name="ENABLE DOSING BY TIME" xml:space="preserve">
+    <value>تمكين الجرعات حسب الوقت</value>
+  </data>
+  <data name="TARE CALIBRATION REQUEST" xml:space="preserve">
+    <value>طلب المعايرة الفارغة</value>
+  </data>
+  <data name="INTERLOCK TO UPSTREAM" xml:space="preserve">
+    <value>التعشيق إلى المنبع</value>
+  </data>
+  <data name="DISABLED IN PRODUCTION (CONSTANT MODE ON)" xml:space="preserve">
+    <value>معطل في الإنتاج (الوضع الثابت قيد التشغيل)</value>
+  </data>
+  <data name="ACTUAL P-I REGULATION OUTPUT" xml:space="preserve">
+    <value>مخرجات تنظيم P-I الفعلية</value>
+  </data>
+  <data name="ENABLE IN MAINTENANCE" xml:space="preserve">
+    <value>تمكين في الصيانة</value>
+  </data>
+  <data name="TOTALIZED FLOWRATE" xml:space="preserve">
+    <value>إجمالي معدل التدفق</value>
+  </data>
+  <data name="RESET TOTALIZER" xml:space="preserve">
+    <value>إعادة تعيين Totalizer</value>
+  </data>
+  <data name="VIEW MESSAGE" xml:space="preserve">
+    <value>شاهد الرساله</value>
+  </data>
+  <data name="ALARM VIEW" xml:space="preserve">
+    <value>عرض المنبه</value>
+  </data>
+  <data name="ENABLE HIGH RESTART SPEED" xml:space="preserve">
+    <value>تفعيل سرعة إعادة التشغيل العالية</value>
+  </data>
+  <data name="ENABLE SEMIAUTO PUMPING MODE" xml:space="preserve">
+    <value>تفعيل وضع الضخ شبه التلقائي</value>
+  </data>
+  <data name="REMAINING PUMPING TIME" xml:space="preserve">
+    <value>وقت الضخ المتبقي</value>
+  </data>
+  <data name="REAMINING  PAUSE TIME" xml:space="preserve">
+    <value>التعمير وقفة الوقت</value>
+  </data>
+  <data name="LEAVE TOP VALVE OPEN DURING PAUSE TIME" xml:space="preserve">
+    <value>اترك الصمام العلوي مفتوحًا أثناء وقت التوقف</value>
+  </data>
+  <data name="SINGLE CYCLE REQUEST (IN PRODUCTION MODE)" xml:space="preserve">
+    <value>طلب دورة واحدة (في وضع الإنتاج)</value>
+  </data>
+  <data name="KEEP THE VALVES ON IN FINAL POSITION" xml:space="preserve">
+    <value>احتفظ بالصمامات في الوضع النهائي</value>
+  </data>
+  <data name="ENABLE LATCH OF CLOSED POSITION" xml:space="preserve">
+    <value>تمكين مزلاج الموقف المغلق</value>
+  </data>
+  <data name="BYPASS DEVICE" xml:space="preserve">
+    <value>جهاز الالتفافية</value>
+  </data>
+  <data name="PLC IN SIMULATION" xml:space="preserve">
+    <value>Plc في المحاكاة</value>
+  </data>
+  <data name="HOPPER EMPTY" xml:space="preserve">
+    <value>قادوس فارغ</value>
+  </data>
+  <data name="INVERTER GENERAL ALARM" xml:space="preserve">
+    <value>الإنذار العام العاكس</value>
+  </data>
+  <data name="INVERTER ALARM PRESENT" xml:space="preserve">
+    <value>إنذار العاكس الحالي</value>
+  </data>
+  <data name="THERMAL OVERLOAD" xml:space="preserve">
+    <value>الزائد الحراري</value>
+  </data>
+  <data name="MAXIMUM LEVEL REACHED" xml:space="preserve">
+    <value>تم بلوغ المستوى الأقصى</value>
+  </data>
+  <data name="LEVEL TRANSDUCER NOT OK" xml:space="preserve">
+    <value>محول المستوى ليس على ما يرام</value>
+  </data>
+  <data name="VALVE IS NOT MOVING" xml:space="preserve">
+    <value>الصمام لا يتحرك</value>
+  </data>
+  <data name="PLC OK CONTACT NOT OK" xml:space="preserve">
+    <value>Plc طيب الاتصال ليس موافق</value>
+  </data>
+  <data name="MAXIMUM CONCENTRATION REACHED" xml:space="preserve">
+    <value>تم بلوغ الحد الأقصى من التركيز</value>
+  </data>
+  <data name="VALVE CLOSED" xml:space="preserve">
+    <value>الصمام مغلق</value>
+  </data>
+  <data name="INFO PANEL" xml:space="preserve">
+    <value>لوحة المعلومات</value>
+  </data>
+  <data name="PROTECTED IMAGE" xml:space="preserve">
+    <value>الصورة المحمية</value>
+  </data>
+  <data name="PAUSE TIME (0 = ALWAYS ON)" xml:space="preserve">
+    <value>وقت الإيقاف المؤقت (0 = قيد التشغيل دائمًا)</value>
+  </data>
+  <data name="ON TIME (0 = ALWAYS OFF)" xml:space="preserve">
+    <value>في الوقت المحدد (0 = إيقاف التشغيل دائمًا)</value>
+  </data>
+  <data name="DEVICE CONTROL" xml:space="preserve">
+    <value>جهاز التحكم</value>
+  </data>
+  <data name="ACTUAL NON-COMPENSATED WATER" xml:space="preserve">
+    <value>المياه الفعلية غير المعوضة</value>
+  </data>
+  <data name="DRY CAUSTIC CONCENTRATION" xml:space="preserve">
+    <value>تركيز المادة الكاوية الجافة</value>
+  </data>
+  <data name="DRY CAUSTIC CONCENTRATION OFFSET ADJUST" xml:space="preserve">
+    <value>تعديل تعويض تركيز المادة الكاوية الجافة</value>
+  </data>
+  <data name="CAUSTIC ADDITIVE DILUTION" xml:space="preserve">
+    <value>تخفيف المضافات الكاوية</value>
+  </data>
+  <data name="DETERGENT CONCENTRATION" xml:space="preserve">
+    <value>تركيز المنظف</value>
+  </data>
+  <data name="DOSING BY TIME - CAUSTIC INJECTION TIME" xml:space="preserve">
+    <value>الجرعات حسب الوقت - وقت حقن المادة الكاوية</value>
+  </data>
+  <data name="DOSING BY TIME - GAP WATER INJECTION TIME" xml:space="preserve">
+    <value>الجرعات حسب الوقت - فجوة وقت حقن الماء</value>
+  </data>
+  <data name="DOSING BY TIME - DETERGENT INJECTION TIME" xml:space="preserve">
+    <value>الجرعات حسب الوقت - وقت حقن المنظفات</value>
+  </data>
+  <data name="MAXIMUM LEVEL VALUE" xml:space="preserve">
+    <value>الحد الأقصى لقيمة المستوى</value>
+  </data>
+  <data name="MINIMUM LEVEL VALUE" xml:space="preserve">
+    <value>قيمة المستوى الأدنى</value>
+  </data>
+  <data name="STOP SILO FILLING" xml:space="preserve">
+    <value>وقف ملء الصومعة</value>
+  </data>
+  <data name="RESTART SILO FILLING" xml:space="preserve">
+    <value>أعد تشغيل تعبئة الصومعة</value>
+  </data>
+  <data name="EMPTY SILO" xml:space="preserve">
+    <value>صومعة فارغة</value>
+  </data>
+  <data name="STOP MATERIAL" xml:space="preserve">
+    <value>وقف المواد</value>
+  </data>
+  <data name="START MATERIAL" xml:space="preserve">
+    <value>بدء المواد</value>
+  </data>
+  <data name="OBSTRUCTION MINIMUM CURRENT" xml:space="preserve">
+    <value>الحد الأدنى من انسداد التيار</value>
+  </data>
+  <data name="EMPTYING TIME BELOW MINIMUM LEVEL" xml:space="preserve">
+    <value>وقت التفريغ أقل من المستوى الأدنى</value>
+  </data>
+  <data name="ACTUAL REFERENCE" xml:space="preserve">
+    <value>المرجع الفعلي</value>
+  </data>
+  <data name="PRODUCTION REFERENCE" xml:space="preserve">
+    <value>مرجع الإنتاج</value>
+  </data>
+  <data name="SENSOR CALIBRATION REQUIRED BY PREVU PANEL" xml:space="preserve">
+    <value>مطلوب معايرة المستشعر بواسطة لوحة Prevu</value>
+  </data>
+  <data name="NO MATERIAL PRESENT" xml:space="preserve">
+    <value>لا توجد مواد موجودة</value>
+  </data>
+  <data name="HIGH CHEMICAL CONCENTRATION WARNING" xml:space="preserve">
+    <value>تحذير من ارتفاع تركيز المواد الكيميائية</value>
+  </data>
+  <data name="LOCAL DISCONNECT OPEN" xml:space="preserve">
+    <value>فتح قطع الاتصال المحلي</value>
+  </data>
+  <data name="(PT100)" xml:space="preserve">
+    <value>(نقطة 100)</value>
+  </data>
+  <data name="LOW CHEMICAL CONCENTRATION WARNING" xml:space="preserve">
+    <value>تحذير من انخفاض تركيز المواد الكيميائية</value>
+  </data>
+  <data name="(1&gt;=MIN)" xml:space="preserve">
+    <value>(1&gt; = دقيقة)</value>
+  </data>
+  <data name="(1=EXT UPSTREAM READY TO GIVE MATERIAL)" xml:space="preserve">
+    <value>(1 = تحويل خارجي جاهز لإعطاء المواد)</value>
+  </data>
+  <data name="(1=DOWNSTREAM OK TO RECEIVE)" xml:space="preserve">
+    <value>(1 = المصب لا بأس به للاستلام)</value>
+  </data>
+  <data name="CONCENTRATION SENSOR OVERLOAD" xml:space="preserve">
+    <value>التركيز الزائد لجهاز الاستشعار</value>
+  </data>
+  <data name="(1=OK)" xml:space="preserve">
+    <value>(1 = موافق)</value>
+  </data>
+  <data name="(1=ENABLE)" xml:space="preserve">
+    <value>(1 = تمكين)</value>
+  </data>
+  <data name="(0=OK)" xml:space="preserve">
+    <value>(0 = حسنًا)</value>
+  </data>
+  <data name="TEMPERATURE TRANSDUCER NOT OK" xml:space="preserve">
+    <value>محول درجة الحرارة ليس على ما يرام</value>
+  </data>
+  <data name="CONCENTRATION SENSOR STATUS NOT OK" xml:space="preserve">
+    <value>حالة مستشعر التركيز ليست جيدة</value>
+  </data>
+  <data name="MINIMUM CONCENTRATION NOT OK" xml:space="preserve">
+    <value>الحد الأدنى من التركيز غير جيد</value>
+  </data>
+  <data name="(1=&lt;MAX)" xml:space="preserve">
+    <value>(1 = &lt;ماكس)</value>
+  </data>
+  <data name="LEVEL OVERLOAD" xml:space="preserve">
+    <value>المستوى الزائد</value>
+  </data>
+  <data name="FAULTY STATUS (INVERTER NOT RUNNING OK)" xml:space="preserve">
+    <value>الحالة الخاطئة (العاكس لا يعمل بشكل جيد)</value>
+  </data>
+  <data name="PULL-CORD SAFETY NOT OK" xml:space="preserve">
+    <value>أمان سحب الحبل ليس جيدًا</value>
+  </data>
+  <data name="MAXIMUM PRESSURE REACHED" xml:space="preserve">
+    <value>بلغ أقصى ضغط</value>
+  </data>
+  <data name="INACCURATE SENSOR READING - CALIBRATION NOT POSSIBLE (SENSOR TO BE CLEANED?)" xml:space="preserve">
+    <value>قراءة غير دقيقة للحساس - المعايرة غير ممكنة (المستشعر سيتم تنظيفه؟)</value>
+  </data>
+  <data name="INACCURATE SENSOR READING (SENSOR TO BE CLEANED?)" xml:space="preserve">
+    <value>قراءة غير دقيقة للحساس (المستشعر المراد تنظيفه؟)</value>
+  </data>
+  <data name="(1=BRT IN AUTO MODE)" xml:space="preserve">
+    <value>(1 = Brt في الوضع التلقائي)</value>
+  </data>
+  <data name="CHANGED" xml:space="preserve">
+    <value>تغير</value>
+  </data>
+  <data name="EXEC_OK" xml:space="preserve">
+    <value>Exec_Ok</value>
+  </data>
+  <data name="IN_PROGR" xml:space="preserve">
+    <value>In_Progr</value>
+  </data>
+  <data name="SELECT MODE" xml:space="preserve">
+    <value>حدد الوضع</value>
+  </data>
+  <data name="(1=OPEN)" xml:space="preserve">
+    <value>(1 = مفتوح)</value>
+  </data>
 </root>
