--- a/Prevu.Localization/Properties/Resources.de.resx
+++ b/Prevu.Localization/Properties/Resources.de.resx
@@ -1453,7 +1453,7 @@
     <value>Laden</value>
   </data>
   <data name="SPEED_ACTUAL" xml:space="preserve">
-    <value>Geschwindigkeit_Aktuell</value>
+    <value>Geschwindigkeit Aktuell</value>
   </data>
   <data name="FINAL SILO" xml:space="preserve">
     <value>Letztes Silo</value>
@@ -1670,5 +1670,473 @@
   </data>
   <data name="NAME" xml:space="preserve">
     <value>Name</value>
+  </data>
+  <data name="PRESSURE TRANSDUCER NOT OK" xml:space="preserve">
+    <value>Druckaufnehmer nicht ok</value>
+  </data>
+  <data name="MINIMUM FLOWRATE" xml:space="preserve">
+    <value>Mindestdurchfluss</value>
+  </data>
+  <data name="FLOWRATE TRANSDUCER NOT OK" xml:space="preserve">
+    <value>Durchflusssensor nicht in Ordnung</value>
+  </data>
+  <data name="LEVEL NOT OK FOR PROCESS" xml:space="preserve">
+    <value>Stufe für Prozess nicht ok</value>
+  </data>
+  <data name="SENSOR DISABLED" xml:space="preserve">
+    <value>Sensor deaktiviert</value>
+  </data>
+  <data name="EXTERNAL PLANT IS NOT OK TO GIVE MATERIAL" xml:space="preserve">
+    <value>Externe Pflanze ist nicht in Ordnung, um Material zu geben</value>
+  </data>
+  <data name="DOWNSTREAM NOT OK TO RECEIVE MATERIAL" xml:space="preserve">
+    <value>Downstream nicht in Ordnung, um Material zu erhalten</value>
+  </data>
+  <data name="MAINTENANCE REFERENCE" xml:space="preserve">
+    <value>Wartungsreferenz</value>
+  </data>
+  <data name="MAXIMUM PRESSURE" xml:space="preserve">
+    <value>Maximaler Druck</value>
+  </data>
+  <data name="MINIMUM PRESSURE" xml:space="preserve">
+    <value>Mindestdruck</value>
+  </data>
+  <data name="PROPORTIONAL GAIN" xml:space="preserve">
+    <value>Propotionaler Anstieg</value>
+  </data>
+  <data name="INTEGRAL SAMPLE TIME" xml:space="preserve">
+    <value>Integrale Abtastzeit</value>
+  </data>
+  <data name="INTEGRAL GAIN (0=DISABLE INTEGRAL)" xml:space="preserve">
+    <value>Integralverstärkung (0 = Integral deaktivieren)</value>
+  </data>
+  <data name="MINIMUM OUTPUT OF REGULATION" xml:space="preserve">
+    <value>Mindestleistung der Regulierung</value>
+  </data>
+  <data name="MAXIMUM CONTRIBUTION OF PROPORTIONAL" xml:space="preserve">
+    <value>Maximaler Beitrag von Proportional</value>
+  </data>
+  <data name="MAXIMUM CONTRIBUTION OF INTEGRAL" xml:space="preserve">
+    <value>Maximaler Beitrag des Integrals</value>
+  </data>
+  <data name="DELTA OVER SETPOINT TO STOP HEATING" xml:space="preserve">
+    <value>Delta über dem Sollwert, um die Heizung zu stoppen</value>
+  </data>
+  <data name="DELTA BELOW SETPOINT TO MAXIMIZE HEATING" xml:space="preserve">
+    <value>Delta unter dem Sollwert, um die Heizung zu maximieren</value>
+  </data>
+  <data name="POSITION IN PRODUCTION (IN CONSTANT MODE)" xml:space="preserve">
+    <value>Position in der Produktion (im konstanten Modus)</value>
+  </data>
+  <data name="POSITION IN MAINTENANCE" xml:space="preserve">
+    <value>Position in der Wartung</value>
+  </data>
+  <data name="MINIMUM FLOWRATE FOR ALARM" xml:space="preserve">
+    <value>Minimale Durchflussrate für Alarm</value>
+  </data>
+  <data name="ACTUAL CONCENTRATION" xml:space="preserve">
+    <value>Tatsächliche Konzentration</value>
+  </data>
+  <data name="MAXIMUM CONCENTRATION" xml:space="preserve">
+    <value>Maximale Konzentration</value>
+  </data>
+  <data name="HIGH CONCENTRATION WARNING" xml:space="preserve">
+    <value>Warnung vor hoher Konzentration</value>
+  </data>
+  <data name="LOW CONCENTRATION WARNING" xml:space="preserve">
+    <value>Warnung vor niedriger Konzentration</value>
+  </data>
+  <data name="MINIMUM CONCENTRATION" xml:space="preserve">
+    <value>Minimale Konzentration</value>
+  </data>
+  <data name="TANK DISCHARGE TIME" xml:space="preserve">
+    <value>Tankentladezeit</value>
+  </data>
+  <data name="TANK HEIGHT" xml:space="preserve">
+    <value>Tankhöhe</value>
+  </data>
+  <data name="MAXIMUM FILLING TIME (0 = CONTROL BYPASS)" xml:space="preserve">
+    <value>Maximale Füllzeit (0 = Regelbypass)</value>
+  </data>
+  <data name="SEMIAUTO PUMPING TIME" xml:space="preserve">
+    <value>Halbautomatische Pumpzeit</value>
+  </data>
+  <data name="DISCHARGE" xml:space="preserve">
+    <value>Entladung</value>
+  </data>
+  <data name="MAXIMUM PAUSE TIME (0=DISCHARGE DISABLED)" xml:space="preserve">
+    <value>Maximale Pausenzeit (0=Entladung deaktiviert)</value>
+  </data>
+  <data name="MINIMUM PAUSE TIME" xml:space="preserve">
+    <value>Minimale Pausenzeit</value>
+  </data>
+  <data name="FULLY CLOSED POSITION DELAY" xml:space="preserve">
+    <value>Verzögerung bei vollständig geschlossener Position</value>
+  </data>
+  <data name="MOTOR STALLED OR SPEED LOSS" xml:space="preserve">
+    <value>Motor blockiert oder Geschwindigkeitsverlust</value>
+  </data>
+  <data name="RESET FAULTS" xml:space="preserve">
+    <value>Fehler zurücksetzen</value>
+  </data>
+  <data name="ACKNOWLEDGED FAULTS" xml:space="preserve">
+    <value>Anerkannte Fehler</value>
+  </data>
+  <data name="PRODUCTION MODE" xml:space="preserve">
+    <value>Produktionsmodus</value>
+  </data>
+  <data name="MESSAGE" xml:space="preserve">
+    <value>Nachricht</value>
+  </data>
+  <data name="(4-20MA)" xml:space="preserve">
+    <value>(4-20 Ma)</value>
+  </data>
+  <data name="MOTOR MAXIMUM AMPERAGE EXCEEDED (&gt;115% OF NOMINAL AMP FOR 15 SEC)" xml:space="preserve">
+    <value>Maximale Motorstromstärke überschritten (&gt;115 % der Nennstromstärke für 15 Sek.)</value>
+  </data>
+  <data name="(1=ENABLED)" xml:space="preserve">
+    <value>(1=Aktiviert)</value>
+  </data>
+  <data name="SIMULATION" xml:space="preserve">
+    <value>Simulation</value>
+  </data>
+  <data name="WASHING 3" xml:space="preserve">
+    <value>Waschen 3</value>
+  </data>
+  <data name="START CONDITIONS" xml:space="preserve">
+    <value>Startbedingungen</value>
+  </data>
+  <data name="INVERTER IN LOCAL MODE" xml:space="preserve">
+    <value>Wechselrichter im lokalen Modus</value>
+  </data>
+  <data name="(1=NOT PUSHED)" xml:space="preserve">
+    <value>(1=nicht gedrückt)</value>
+  </data>
+  <data name="MOTOR CURRENT OVER MAXIMUM RANGE LIMIT" xml:space="preserve">
+    <value>Motorstrom über der maximalen Bereichsgrenze</value>
+  </data>
+  <data name="REACTION ARM MECHANICAL OVERLOAD" xml:space="preserve">
+    <value>Mechanische Überlastung des Reaktionsarms</value>
+  </data>
+  <data name="ESTOP CONTACTORS NOT OK" xml:space="preserve">
+    <value>Stoppschütze nicht in Ordnung</value>
+  </data>
+  <data name="MOTOR CURRENT TRANSDUCER BROKEN WIRE" xml:space="preserve">
+    <value>Kabelbruch des Motorstromwandlers</value>
+  </data>
+  <data name="TARE CALIBRATION NOT POSSIBLE FOR MAXIMUM WEIGHT" xml:space="preserve">
+    <value>Tara-Kalibrierung für Maximalgewicht nicht möglich</value>
+  </data>
+  <data name="WEIGHT TRANSDUCER NOT OK" xml:space="preserve">
+    <value>Gewichtswandler nicht in Ordnung</value>
+  </data>
+  <data name="MAXIMUM REFILL TIME" xml:space="preserve">
+    <value>Maximale Nachfüllzeit</value>
+  </data>
+  <data name="MOTOR MINIMUM AMPERAGE NOT REACHED (5% OF NOMINAL AMP)" xml:space="preserve">
+    <value>Mindeststromstärke des Motors nicht erreicht (5 % der Nennstromstärke)</value>
+  </data>
+  <data name="SAFETIES NOT OK" xml:space="preserve">
+    <value>Sicherheiten nicht ok</value>
+  </data>
+  <data name="POSITION OPEN NOT OK" xml:space="preserve">
+    <value>Position offen nicht ok</value>
+  </data>
+  <data name="POSITION CLOSED NOT OK" xml:space="preserve">
+    <value>Position geschlossen nicht ok</value>
+  </data>
+  <data name="MOTOR OVERHEAT" xml:space="preserve">
+    <value>Motorüberhitzung</value>
+  </data>
+  <data name="CLOSED POSITION NOT OK" xml:space="preserve">
+    <value>Geschlossene Position nicht ok</value>
+  </data>
+  <data name="BOTH VALVES ARE NOT FULLY CLOSED - TANK EMPTIYNG!" xml:space="preserve">
+    <value>Beide Ventile sind nicht vollständig geschlossen - Tankentleerung!</value>
+  </data>
+  <data name="RETURN VALUE" xml:space="preserve">
+    <value>Rückgabewert</value>
+  </data>
+  <data name="COMMAND" xml:space="preserve">
+    <value>Befehl</value>
+  </data>
+  <data name="DISABLE SENSOR" xml:space="preserve">
+    <value>Sensor deaktivieren</value>
+  </data>
+  <data name="DELAY FOR MESSAGE 'NO MATERIAL' (0=NO MESSAGE)" xml:space="preserve">
+    <value>Verzögerung für Nachricht 'Kein Material' (0=Keine Nachricht)</value>
+  </data>
+  <data name="SET MAXIMUM LEVEL" xml:space="preserve">
+    <value>Stellen Sie den maximalen Pegel ein</value>
+  </data>
+  <data name="SET MINIMUM LEVEL" xml:space="preserve">
+    <value>Stellen Sie das Mindestniveau ein</value>
+  </data>
+  <data name="WATER TO COMPENSATE WITH A FULL BATCH" xml:space="preserve">
+    <value>Wasser zum Ausgleich mit einer vollen Charge</value>
+  </data>
+  <data name="CAUSTIC - TARGET" xml:space="preserve">
+    <value>Ätzend - Ziel</value>
+  </data>
+  <data name="LATEST ADDITION" xml:space="preserve">
+    <value>Neueste Ergänzung</value>
+  </data>
+  <data name="GAP WATER - TARGET" xml:space="preserve">
+    <value>Lückenwasser - Ziel</value>
+  </data>
+  <data name="DETERGENT - TARGET" xml:space="preserve">
+    <value>Waschmittel - Ziel</value>
+  </data>
+  <data name="FINAL WATER LATEST ADDITION" xml:space="preserve">
+    <value>Final Water Neueste Ergänzung</value>
+  </data>
+  <data name="ENABLE DOSING BY TIME" xml:space="preserve">
+    <value>Dosierung nach Zeit aktivieren</value>
+  </data>
+  <data name="TARE CALIBRATION REQUEST" xml:space="preserve">
+    <value>Tara-Kalibrierungsanforderung</value>
+  </data>
+  <data name="INTERLOCK TO UPSTREAM" xml:space="preserve">
+    <value>Verriegelung zu Upstream</value>
+  </data>
+  <data name="DISABLED IN PRODUCTION (CONSTANT MODE ON)" xml:space="preserve">
+    <value>In Produktion deaktiviert (Konstanter Modus Ein)</value>
+  </data>
+  <data name="ACTUAL P-I REGULATION OUTPUT" xml:space="preserve">
+    <value>Tatsächlicher Ausgang der P-I-Regelung</value>
+  </data>
+  <data name="ENABLE IN MAINTENANCE" xml:space="preserve">
+    <value>In Wartung aktivieren</value>
+  </data>
+  <data name="TOTALIZED FLOWRATE" xml:space="preserve">
+    <value>Totalisierter Durchfluss</value>
+  </data>
+  <data name="RESET TOTALIZER" xml:space="preserve">
+    <value>Zähler zurücksetzen</value>
+  </data>
+  <data name="VIEW MESSAGE" xml:space="preserve">
+    <value>Nachricht ansehen</value>
+  </data>
+  <data name="ALARM VIEW" xml:space="preserve">
+    <value>Alarmansicht</value>
+  </data>
+  <data name="ENABLE HIGH RESTART SPEED" xml:space="preserve">
+    <value>Aktivieren Sie hohe Neustartgeschwindigkeit</value>
+  </data>
+  <data name="ENABLE SEMIAUTO PUMPING MODE" xml:space="preserve">
+    <value>Aktivieren Sie den halbautomatischen Pumpmodus</value>
+  </data>
+  <data name="REMAINING PUMPING TIME" xml:space="preserve">
+    <value>Verbleibende Pumpzeit</value>
+  </data>
+  <data name="REAMINING  PAUSE TIME" xml:space="preserve">
+    <value>Verbleibende Pausenzeit</value>
+  </data>
+  <data name="LEAVE TOP VALVE OPEN DURING PAUSE TIME" xml:space="preserve">
+    <value>Lassen Sie das obere Ventil während der Pausenzeit geöffnet</value>
+  </data>
+  <data name="SINGLE CYCLE REQUEST (IN PRODUCTION MODE)" xml:space="preserve">
+    <value>Einzelzyklusanforderung (im Produktionsmodus)</value>
+  </data>
+  <data name="KEEP THE VALVES ON IN FINAL POSITION" xml:space="preserve">
+    <value>Halten Sie die Ventile in der Endposition eingeschaltet</value>
+  </data>
+  <data name="ENABLE LATCH OF CLOSED POSITION" xml:space="preserve">
+    <value>Aktivieren Sie die Verriegelung der geschlossenen Position</value>
+  </data>
+  <data name="BYPASS DEVICE" xml:space="preserve">
+    <value>Bypass-Gerät</value>
+  </data>
+  <data name="PLC IN SIMULATION" xml:space="preserve">
+    <value>SPS in Simulation</value>
+  </data>
+  <data name="HOPPER EMPTY" xml:space="preserve">
+    <value>Trichter leer</value>
+  </data>
+  <data name="INVERTER GENERAL ALARM" xml:space="preserve">
+    <value>Allgemeiner Wechselrichteralarm</value>
+  </data>
+  <data name="INVERTER ALARM PRESENT" xml:space="preserve">
+    <value>Wechselrichteralarm vorhanden</value>
+  </data>
+  <data name="THERMAL OVERLOAD" xml:space="preserve">
+    <value>Thermische Überlastung</value>
+  </data>
+  <data name="MAXIMUM LEVEL REACHED" xml:space="preserve">
+    <value>Maximale Stufe erreicht</value>
+  </data>
+  <data name="LEVEL TRANSDUCER NOT OK" xml:space="preserve">
+    <value>Füllstandssensor nicht in Ordnung</value>
+  </data>
+  <data name="VALVE IS NOT MOVING" xml:space="preserve">
+    <value>Ventil bewegt sich nicht</value>
+  </data>
+  <data name="PLC OK CONTACT NOT OK" xml:space="preserve">
+    <value>SPS ok Kontakt nicht ok</value>
+  </data>
+  <data name="MAXIMUM CONCENTRATION REACHED" xml:space="preserve">
+    <value>Maximale Konzentration erreicht</value>
+  </data>
+  <data name="VALVE CLOSED" xml:space="preserve">
+    <value>Ventil geschlossen</value>
+  </data>
+  <data name="INFO PANEL" xml:space="preserve">
+    <value>Info-Panel</value>
+  </data>
+  <data name="PROTECTED IMAGE" xml:space="preserve">
+    <value>Geschütztes Bild</value>
+  </data>
+  <data name="PAUSE TIME (0 = ALWAYS ON)" xml:space="preserve">
+    <value>Pausenzeit (0 = immer an)</value>
+  </data>
+  <data name="ON TIME (0 = ALWAYS OFF)" xml:space="preserve">
+    <value>Einschaltzeit (0 = immer aus)</value>
+  </data>
+  <data name="DEVICE CONTROL" xml:space="preserve">
+    <value>Gerätesteuerung</value>
+  </data>
+  <data name="ACTUAL NON-COMPENSATED WATER" xml:space="preserve">
+    <value>Tatsächliches nicht kompensiertes Wasser</value>
+  </data>
+  <data name="DRY CAUSTIC CONCENTRATION" xml:space="preserve">
+    <value>Trockenätzkonzentration</value>
+  </data>
+  <data name="DRY CAUSTIC CONCENTRATION OFFSET ADJUST" xml:space="preserve">
+    <value>Trockenkaustik-Konzentrations-Offset-Anpassung</value>
+  </data>
+  <data name="CAUSTIC ADDITIVE DILUTION" xml:space="preserve">
+    <value>Ätzende Additiv-Verdünnung</value>
+  </data>
+  <data name="DETERGENT CONCENTRATION" xml:space="preserve">
+    <value>Waschmittelkonzentration</value>
+  </data>
+  <data name="DOSING BY TIME - CAUSTIC INJECTION TIME" xml:space="preserve">
+    <value>Dosierung nach Zeit - Ätzmittelinjektionszeit</value>
+  </data>
+  <data name="DOSING BY TIME - GAP WATER INJECTION TIME" xml:space="preserve">
+    <value>Dosierung nach Zeit - Einspritzzeit des Lückenwassers</value>
+  </data>
+  <data name="DOSING BY TIME - DETERGENT INJECTION TIME" xml:space="preserve">
+    <value>Dosierung nach Zeit - Einspritzzeit des Reinigungsmittels</value>
+  </data>
+  <data name="MAXIMUM LEVEL VALUE" xml:space="preserve">
+    <value>Maximaler Pegelwert</value>
+  </data>
+  <data name="MINIMUM LEVEL VALUE" xml:space="preserve">
+    <value>Minimaler Levelwert</value>
+  </data>
+  <data name="STOP SILO FILLING" xml:space="preserve">
+    <value>Silobefüllung stoppen</value>
+  </data>
+  <data name="RESTART SILO FILLING" xml:space="preserve">
+    <value>Silobefüllung neu starten</value>
+  </data>
+  <data name="EMPTY SILO" xml:space="preserve">
+    <value>Leeres Silo</value>
+  </data>
+  <data name="STOP MATERIAL" xml:space="preserve">
+    <value>Material stoppen</value>
+  </data>
+  <data name="START MATERIAL" xml:space="preserve">
+    <value>Material starten</value>
+  </data>
+  <data name="OBSTRUCTION MINIMUM CURRENT" xml:space="preserve">
+    <value>Hindernis-Mindeststrom</value>
+  </data>
+  <data name="EMPTYING TIME BELOW MINIMUM LEVEL" xml:space="preserve">
+    <value>Entleerungszeit unter Mindestfüllstand</value>
+  </data>
+  <data name="ACTUAL REFERENCE" xml:space="preserve">
+    <value>Tatsächliche Referenz</value>
+  </data>
+  <data name="PRODUCTION REFERENCE" xml:space="preserve">
+    <value>Produktionsreferenz</value>
+  </data>
+  <data name="SENSOR CALIBRATION REQUIRED BY PREVU PANEL" xml:space="preserve">
+    <value>Sensorkalibrierung von Prevu Panel erforderlich</value>
+  </data>
+  <data name="NO MATERIAL PRESENT" xml:space="preserve">
+    <value>Kein Material vorhanden</value>
+  </data>
+  <data name="HIGH CHEMICAL CONCENTRATION WARNING" xml:space="preserve">
+    <value>Warnung vor hoher chemischer Konzentration</value>
+  </data>
+  <data name="LOCAL DISCONNECT OPEN" xml:space="preserve">
+    <value>Lokale Trennung geöffnet</value>
+  </data>
+  <data name="(PT100)" xml:space="preserve">
+    <value>(Pt100)</value>
+  </data>
+  <data name="LOW CHEMICAL CONCENTRATION WARNING" xml:space="preserve">
+    <value>Warnung vor niedriger Chemikalienkonzentration</value>
+  </data>
+  <data name="(1&gt;=MIN)" xml:space="preserve">
+    <value>(1&gt;=Min)</value>
+  </data>
+  <data name="(1=EXT UPSTREAM READY TO GIVE MATERIAL)" xml:space="preserve">
+    <value>(1=Ext Upstream bereit, Material zu geben)</value>
+  </data>
+  <data name="(1=DOWNSTREAM OK TO RECEIVE)" xml:space="preserve">
+    <value>(1=Downstream OK zum Empfangen)</value>
+  </data>
+  <data name="CONCENTRATION SENSOR OVERLOAD" xml:space="preserve">
+    <value>Überlastung des Konzentrationssensors</value>
+  </data>
+  <data name="(1=OK)" xml:space="preserve">
+    <value>(1=Okay)</value>
+  </data>
+  <data name="(1=ENABLE)" xml:space="preserve">
+    <value>(1=Aktivieren)</value>
+  </data>
+  <data name="(0=OK)" xml:space="preserve">
+    <value>(0=Okay)</value>
+  </data>
+  <data name="TEMPERATURE TRANSDUCER NOT OK" xml:space="preserve">
+    <value>Temperaturwandler nicht in Ordnung</value>
+  </data>
+  <data name="CONCENTRATION SENSOR STATUS NOT OK" xml:space="preserve">
+    <value>Status des Konzentrationssensors nicht in Ordnung</value>
+  </data>
+  <data name="MINIMUM CONCENTRATION NOT OK" xml:space="preserve">
+    <value>Mindestkonzentration nicht in Ordnung</value>
+  </data>
+  <data name="(1=&lt;MAX)" xml:space="preserve">
+    <value>(1=&lt;Max)</value>
+  </data>
+  <data name="LEVEL OVERLOAD" xml:space="preserve">
+    <value>Level-Überlastung</value>
+  </data>
+  <data name="FAULTY STATUS (INVERTER NOT RUNNING OK)" xml:space="preserve">
+    <value>Fehlerhafter Status (Wechselrichter läuft nicht in Ordnung)</value>
+  </data>
+  <data name="PULL-CORD SAFETY NOT OK" xml:space="preserve">
+    <value>Zugschnursicherung nicht ok</value>
+  </data>
+  <data name="MAXIMUM PRESSURE REACHED" xml:space="preserve">
+    <value>Maximaldruck erreicht</value>
+  </data>
+  <data name="INACCURATE SENSOR READING - CALIBRATION NOT POSSIBLE (SENSOR TO BE CLEANED?)" xml:space="preserve">
+    <value>Ungenauer Sensormesswert – Kalibrierung nicht möglich (Sensor muss gereinigt werden?)</value>
+  </data>
+  <data name="INACCURATE SENSOR READING (SENSOR TO BE CLEANED?)" xml:space="preserve">
+    <value>Ungenauer Sensormesswert (zu reinigender Sensor?)</value>
+  </data>
+  <data name="(1=BRT IN AUTO MODE)" xml:space="preserve">
+    <value>(1=Brt im Auto-Modus)</value>
+  </data>
+  <data name="CHANGED" xml:space="preserve">
+    <value>Geändert</value>
+  </data>
+  <data name="EXEC_OK" xml:space="preserve">
+    <value>Exec_Ok</value>
+  </data>
+  <data name="IN_PROGR" xml:space="preserve">
+    <value>In_Progr</value>
+  </data>
+  <data name="SELECT MODE" xml:space="preserve">
+    <value>Auswahlmodus</value>
+  </data>
+  <data name="(1=OPEN)" xml:space="preserve">
+    <value>(1=offen)</value>
   </data>
 </root>
