--- a/Prevu.Localization/Properties/Resources.it.resx
+++ b/Prevu.Localization/Properties/Resources.it.resx
@@ -1036,7 +1036,7 @@
     <value>Ricarica</value>
   </data>
   <data name="SPEED_ACTUAL" xml:space="preserve">
-    <value>Velocità_Effettiva</value>
+    <value>Velocità Effettiva</value>
   </data>
   <data name="FINAL SILO" xml:space="preserve">
     <value>Silo Finale</value>
@@ -1253,5 +1253,473 @@
   </data>
   <data name="NAME" xml:space="preserve">
     <value>Nome</value>
+  </data>
+  <data name="PRESSURE TRANSDUCER NOT OK" xml:space="preserve">
+    <value>Trasduttore di pressione non ok</value>
+  </data>
+  <data name="MINIMUM FLOWRATE" xml:space="preserve">
+    <value>Portata minima</value>
+  </data>
+  <data name="FLOWRATE TRANSDUCER NOT OK" xml:space="preserve">
+    <value>Trasduttore di portata non ok</value>
+  </data>
+  <data name="LEVEL NOT OK FOR PROCESS" xml:space="preserve">
+    <value>Livello non ok per il processo</value>
+  </data>
+  <data name="SENSOR DISABLED" xml:space="preserve">
+    <value>Sensore disabilitato</value>
+  </data>
+  <data name="EXTERNAL PLANT IS NOT OK TO GIVE MATERIAL" xml:space="preserve">
+    <value>L'impianto esterno non va bene per dare materiale</value>
+  </data>
+  <data name="DOWNSTREAM NOT OK TO RECEIVE MATERIAL" xml:space="preserve">
+    <value>A valle non è possibile ricevere materiale</value>
+  </data>
+  <data name="MAINTENANCE REFERENCE" xml:space="preserve">
+    <value>Riferimento di manutenzione</value>
+  </data>
+  <data name="MAXIMUM PRESSURE" xml:space="preserve">
+    <value>Pressione massima</value>
+  </data>
+  <data name="MINIMUM PRESSURE" xml:space="preserve">
+    <value>Pressione minima</value>
+  </data>
+  <data name="PROPORTIONAL GAIN" xml:space="preserve">
+    <value>Guadagno proporzionale</value>
+  </data>
+  <data name="INTEGRAL SAMPLE TIME" xml:space="preserve">
+    <value>Tempo di campionamento integrale</value>
+  </data>
+  <data name="INTEGRAL GAIN (0=DISABLE INTEGRAL)" xml:space="preserve">
+    <value>Guadagno integrale (0=Disabilita integrale)</value>
+  </data>
+  <data name="MINIMUM OUTPUT OF REGULATION" xml:space="preserve">
+    <value>Produzione minima di regolamento</value>
+  </data>
+  <data name="MAXIMUM CONTRIBUTION OF PROPORTIONAL" xml:space="preserve">
+    <value>Contributo Massimo Di Proporzionale</value>
+  </data>
+  <data name="MAXIMUM CONTRIBUTION OF INTEGRAL" xml:space="preserve">
+    <value>Massimo contributo dell'integrale</value>
+  </data>
+  <data name="DELTA OVER SETPOINT TO STOP HEATING" xml:space="preserve">
+    <value>Delta oltre il setpoint per interrompere il riscaldamento</value>
+  </data>
+  <data name="DELTA BELOW SETPOINT TO MAXIMIZE HEATING" xml:space="preserve">
+    <value>Delta sotto il setpoint per massimizzare il riscaldamento</value>
+  </data>
+  <data name="POSITION IN PRODUCTION (IN CONSTANT MODE)" xml:space="preserve">
+    <value>Posizione in produzione (in modalità costante)</value>
+  </data>
+  <data name="POSITION IN MAINTENANCE" xml:space="preserve">
+    <value>Posizione in manutenzione</value>
+  </data>
+  <data name="MINIMUM FLOWRATE FOR ALARM" xml:space="preserve">
+    <value>Portata minima per allarme</value>
+  </data>
+  <data name="ACTUAL CONCENTRATION" xml:space="preserve">
+    <value>Concentrazione effettiva</value>
+  </data>
+  <data name="MAXIMUM CONCENTRATION" xml:space="preserve">
+    <value>Massima concentrazione</value>
+  </data>
+  <data name="HIGH CONCENTRATION WARNING" xml:space="preserve">
+    <value>Avviso di alta concentrazione</value>
+  </data>
+  <data name="LOW CONCENTRATION WARNING" xml:space="preserve">
+    <value>Avviso di bassa concentrazione</value>
+  </data>
+  <data name="MINIMUM CONCENTRATION" xml:space="preserve">
+    <value>Concentrazione minima</value>
+  </data>
+  <data name="TANK DISCHARGE TIME" xml:space="preserve">
+    <value>Tempo di scarico del serbatoio</value>
+  </data>
+  <data name="TANK HEIGHT" xml:space="preserve">
+    <value>Altezza del serbatoio</value>
+  </data>
+  <data name="MAXIMUM FILLING TIME (0 = CONTROL BYPASS)" xml:space="preserve">
+    <value>Tempo massimo di riempimento (0 = bypass di controllo)</value>
+  </data>
+  <data name="SEMIAUTO PUMPING TIME" xml:space="preserve">
+    <value>Tempo di pompaggio semiautomatico</value>
+  </data>
+  <data name="DISCHARGE" xml:space="preserve">
+    <value>Scarico</value>
+  </data>
+  <data name="MAXIMUM PAUSE TIME (0=DISCHARGE DISABLED)" xml:space="preserve">
+    <value>Tempo Pausa Massimo (0=Scarica Disattivata)</value>
+  </data>
+  <data name="MINIMUM PAUSE TIME" xml:space="preserve">
+    <value>Tempo di pausa minimo</value>
+  </data>
+  <data name="FULLY CLOSED POSITION DELAY" xml:space="preserve">
+    <value>Ritardo posizione completamente chiusa</value>
+  </data>
+  <data name="MOTOR STALLED OR SPEED LOSS" xml:space="preserve">
+    <value>Motore in stallo o perdita di velocità</value>
+  </data>
+  <data name="RESET FAULTS" xml:space="preserve">
+    <value>Ripristina guasti</value>
+  </data>
+  <data name="ACKNOWLEDGED FAULTS" xml:space="preserve">
+    <value>Difetti riconosciuti</value>
+  </data>
+  <data name="PRODUCTION MODE" xml:space="preserve">
+    <value>Modalità di produzione</value>
+  </data>
+  <data name="MESSAGE" xml:space="preserve">
+    <value>Messaggio</value>
+  </data>
+  <data name="(4-20MA)" xml:space="preserve">
+    <value>(4-20 mA)</value>
+  </data>
+  <data name="MOTOR MAXIMUM AMPERAGE EXCEEDED (&gt;115% OF NOMINAL AMP FOR 15 SEC)" xml:space="preserve">
+    <value>Amperaggio massimo motore superato (&gt;115% dell'amp nominale per 15 secondi)</value>
+  </data>
+  <data name="(1=ENABLED)" xml:space="preserve">
+    <value>(1=Abilitato)</value>
+  </data>
+  <data name="SIMULATION" xml:space="preserve">
+    <value>Simulazione</value>
+  </data>
+  <data name="WASHING 3" xml:space="preserve">
+    <value>Lavaggio 3</value>
+  </data>
+  <data name="START CONDITIONS" xml:space="preserve">
+    <value>Condizioni di inizio</value>
+  </data>
+  <data name="INVERTER IN LOCAL MODE" xml:space="preserve">
+    <value>Inverter in modalità locale</value>
+  </data>
+  <data name="(1=NOT PUSHED)" xml:space="preserve">
+    <value>(1=Non premuto)</value>
+  </data>
+  <data name="MOTOR CURRENT OVER MAXIMUM RANGE LIMIT" xml:space="preserve">
+    <value>Corrente del motore oltre il limite massimo di portata</value>
+  </data>
+  <data name="REACTION ARM MECHANICAL OVERLOAD" xml:space="preserve">
+    <value>Sovraccarico meccanico del braccio di reazione</value>
+  </data>
+  <data name="ESTOP CONTACTORS NOT OK" xml:space="preserve">
+    <value>Contattori di arresto non ok</value>
+  </data>
+  <data name="MOTOR CURRENT TRANSDUCER BROKEN WIRE" xml:space="preserve">
+    <value>Filo rotto del trasduttore di corrente del motore</value>
+  </data>
+  <data name="TARE CALIBRATION NOT POSSIBLE FOR MAXIMUM WEIGHT" xml:space="preserve">
+    <value>Calibrazione della tara non possibile per il peso massimo</value>
+  </data>
+  <data name="WEIGHT TRANSDUCER NOT OK" xml:space="preserve">
+    <value>Trasduttore di peso non ok</value>
+  </data>
+  <data name="MAXIMUM REFILL TIME" xml:space="preserve">
+    <value>Tempo massimo di ricarica</value>
+  </data>
+  <data name="MOTOR MINIMUM AMPERAGE NOT REACHED (5% OF NOMINAL AMP)" xml:space="preserve">
+    <value>Amperaggio minimo motore non raggiunto (5% dell'amp nominale)</value>
+  </data>
+  <data name="SAFETIES NOT OK" xml:space="preserve">
+    <value>Sicurezze non ok</value>
+  </data>
+  <data name="POSITION OPEN NOT OK" xml:space="preserve">
+    <value>Posizione aperta non ok</value>
+  </data>
+  <data name="POSITION CLOSED NOT OK" xml:space="preserve">
+    <value>Posizione chiusa non ok</value>
+  </data>
+  <data name="MOTOR OVERHEAT" xml:space="preserve">
+    <value>Surriscaldamento del motore</value>
+  </data>
+  <data name="CLOSED POSITION NOT OK" xml:space="preserve">
+    <value>Posizione chiusa non ok</value>
+  </data>
+  <data name="BOTH VALVES ARE NOT FULLY CLOSED - TANK EMPTIYNG!" xml:space="preserve">
+    <value>Entrambe le valvole non sono completamente chiuse - Svuotamento del serbatoio!</value>
+  </data>
+  <data name="RETURN VALUE" xml:space="preserve">
+    <value>Valore di ritorno</value>
+  </data>
+  <data name="COMMAND" xml:space="preserve">
+    <value>Comando</value>
+  </data>
+  <data name="DISABLE SENSOR" xml:space="preserve">
+    <value>Disabilita sensore</value>
+  </data>
+  <data name="DELAY FOR MESSAGE 'NO MATERIAL' (0=NO MESSAGE)" xml:space="preserve">
+    <value>Ritardo per messaggio 'Nessun materiale' (0=Nessun messaggio)</value>
+  </data>
+  <data name="SET MAXIMUM LEVEL" xml:space="preserve">
+    <value>Imposta il livello massimo</value>
+  </data>
+  <data name="SET MINIMUM LEVEL" xml:space="preserve">
+    <value>Imposta il livello minimo</value>
+  </data>
+  <data name="WATER TO COMPENSATE WITH A FULL BATCH" xml:space="preserve">
+    <value>Acqua per compensare con un lotto intero</value>
+  </data>
+  <data name="CAUSTIC - TARGET" xml:space="preserve">
+    <value>Caustico - Bersaglio</value>
+  </data>
+  <data name="LATEST ADDITION" xml:space="preserve">
+    <value>Ultima aggiunta</value>
+  </data>
+  <data name="GAP WATER - TARGET" xml:space="preserve">
+    <value>Gap Water - Obiettivo</value>
+  </data>
+  <data name="DETERGENT - TARGET" xml:space="preserve">
+    <value>Detersivo - Obiettivo</value>
+  </data>
+  <data name="FINAL WATER LATEST ADDITION" xml:space="preserve">
+    <value>Ultima aggiunta di acqua finale</value>
+  </data>
+  <data name="ENABLE DOSING BY TIME" xml:space="preserve">
+    <value>Abilita il dosaggio in base al tempo</value>
+  </data>
+  <data name="TARE CALIBRATION REQUEST" xml:space="preserve">
+    <value>Richiesta di calibrazione della tara</value>
+  </data>
+  <data name="INTERLOCK TO UPSTREAM" xml:space="preserve">
+    <value>Interblocco a monte</value>
+  </data>
+  <data name="DISABLED IN PRODUCTION (CONSTANT MODE ON)" xml:space="preserve">
+    <value>Disabilitato in produzione (modalità costante attiva)</value>
+  </data>
+  <data name="ACTUAL P-I REGULATION OUTPUT" xml:space="preserve">
+    <value>Uscita effettiva del regolamento PI</value>
+  </data>
+  <data name="ENABLE IN MAINTENANCE" xml:space="preserve">
+    <value>Abilita in manutenzione</value>
+  </data>
+  <data name="TOTALIZED FLOWRATE" xml:space="preserve">
+    <value>Portata Totalizzata</value>
+  </data>
+  <data name="RESET TOTALIZER" xml:space="preserve">
+    <value>Reimposta totalizzatore</value>
+  </data>
+  <data name="VIEW MESSAGE" xml:space="preserve">
+    <value>Visualizza messaggio</value>
+  </data>
+  <data name="ALARM VIEW" xml:space="preserve">
+    <value>Visualizzazione allarmi</value>
+  </data>
+  <data name="ENABLE HIGH RESTART SPEED" xml:space="preserve">
+    <value>Abilita alta velocità di riavvio</value>
+  </data>
+  <data name="ENABLE SEMIAUTO PUMPING MODE" xml:space="preserve">
+    <value>Abilita la modalità di pompaggio semiautomatica</value>
+  </data>
+  <data name="REMAINING PUMPING TIME" xml:space="preserve">
+    <value>Tempo di pompaggio rimanente</value>
+  </data>
+  <data name="REAMINING  PAUSE TIME" xml:space="preserve">
+    <value>Tempo di pausa rimanente</value>
+  </data>
+  <data name="LEAVE TOP VALVE OPEN DURING PAUSE TIME" xml:space="preserve">
+    <value>Lasciare la valvola superiore aperta durante il tempo di pausa</value>
+  </data>
+  <data name="SINGLE CYCLE REQUEST (IN PRODUCTION MODE)" xml:space="preserve">
+    <value>Richiesta ciclo singolo (in modalità produzione)</value>
+  </data>
+  <data name="KEEP THE VALVES ON IN FINAL POSITION" xml:space="preserve">
+    <value>Tenere le valvole in posizione finale</value>
+  </data>
+  <data name="ENABLE LATCH OF CLOSED POSITION" xml:space="preserve">
+    <value>Abilita latch di posizione chiusa</value>
+  </data>
+  <data name="BYPASS DEVICE" xml:space="preserve">
+    <value>Dispositivo di bypass</value>
+  </data>
+  <data name="PLC IN SIMULATION" xml:space="preserve">
+    <value>Plc in simulazione</value>
+  </data>
+  <data name="HOPPER EMPTY" xml:space="preserve">
+    <value>Tramoggia vuota</value>
+  </data>
+  <data name="INVERTER GENERAL ALARM" xml:space="preserve">
+    <value>Allarme generale inverter</value>
+  </data>
+  <data name="INVERTER ALARM PRESENT" xml:space="preserve">
+    <value>Allarme inverter presente</value>
+  </data>
+  <data name="THERMAL OVERLOAD" xml:space="preserve">
+    <value>Sovraccarico termico</value>
+  </data>
+  <data name="MAXIMUM LEVEL REACHED" xml:space="preserve">
+    <value>Livello massimo raggiunto</value>
+  </data>
+  <data name="LEVEL TRANSDUCER NOT OK" xml:space="preserve">
+    <value>Trasduttore di livello non ok</value>
+  </data>
+  <data name="VALVE IS NOT MOVING" xml:space="preserve">
+    <value>La valvola non si muove</value>
+  </data>
+  <data name="PLC OK CONTACT NOT OK" xml:space="preserve">
+    <value>Plc ok contatto non ok</value>
+  </data>
+  <data name="MAXIMUM CONCENTRATION REACHED" xml:space="preserve">
+    <value>Massima concentrazione raggiunta</value>
+  </data>
+  <data name="VALVE CLOSED" xml:space="preserve">
+    <value>Valvola chiusa</value>
+  </data>
+  <data name="INFO PANEL" xml:space="preserve">
+    <value>Pannello Informazioni</value>
+  </data>
+  <data name="PROTECTED IMAGE" xml:space="preserve">
+    <value>Immagine protetta</value>
+  </data>
+  <data name="PAUSE TIME (0 = ALWAYS ON)" xml:space="preserve">
+    <value>Tempo di pausa (0 = sempre attivo)</value>
+  </data>
+  <data name="ON TIME (0 = ALWAYS OFF)" xml:space="preserve">
+    <value>On Time (0 = sempre spento)</value>
+  </data>
+  <data name="DEVICE CONTROL" xml:space="preserve">
+    <value>Controllo del dispositivo</value>
+  </data>
+  <data name="ACTUAL NON-COMPENSATED WATER" xml:space="preserve">
+    <value>Acqua reale non compensata</value>
+  </data>
+  <data name="DRY CAUSTIC CONCENTRATION" xml:space="preserve">
+    <value>Concentrazione caustica secca</value>
+  </data>
+  <data name="DRY CAUSTIC CONCENTRATION OFFSET ADJUST" xml:space="preserve">
+    <value>Regolazione offset concentrazione caustica secca</value>
+  </data>
+  <data name="CAUSTIC ADDITIVE DILUTION" xml:space="preserve">
+    <value>Diluizione additiva caustica</value>
+  </data>
+  <data name="DETERGENT CONCENTRATION" xml:space="preserve">
+    <value>Concentrazione detergente</value>
+  </data>
+  <data name="DOSING BY TIME - CAUSTIC INJECTION TIME" xml:space="preserve">
+    <value>Dosaggio a tempo - Tempo di iniezione caustica</value>
+  </data>
+  <data name="DOSING BY TIME - GAP WATER INJECTION TIME" xml:space="preserve">
+    <value>Dosaggio in base al tempo - Tempo di iniezione dell'acqua gap</value>
+  </data>
+  <data name="DOSING BY TIME - DETERGENT INJECTION TIME" xml:space="preserve">
+    <value>Dosaggio a tempo - Tempo di iniezione del detersivo</value>
+  </data>
+  <data name="MAXIMUM LEVEL VALUE" xml:space="preserve">
+    <value>Valore di livello massimo</value>
+  </data>
+  <data name="MINIMUM LEVEL VALUE" xml:space="preserve">
+    <value>Valore di livello minimo</value>
+  </data>
+  <data name="STOP SILO FILLING" xml:space="preserve">
+    <value>Interrompi il riempimento del silo</value>
+  </data>
+  <data name="RESTART SILO FILLING" xml:space="preserve">
+    <value>Riavvia il riempimento del silo</value>
+  </data>
+  <data name="EMPTY SILO" xml:space="preserve">
+    <value>Silo vuoto</value>
+  </data>
+  <data name="STOP MATERIAL" xml:space="preserve">
+    <value>Ferma materiale</value>
+  </data>
+  <data name="START MATERIAL" xml:space="preserve">
+    <value>Inizia materiale</value>
+  </data>
+  <data name="OBSTRUCTION MINIMUM CURRENT" xml:space="preserve">
+    <value>Corrente minima di ostruzione</value>
+  </data>
+  <data name="EMPTYING TIME BELOW MINIMUM LEVEL" xml:space="preserve">
+    <value>Tempo di svuotamento al di sotto del livello minimo</value>
+  </data>
+  <data name="ACTUAL REFERENCE" xml:space="preserve">
+    <value>Riferimento effettivo</value>
+  </data>
+  <data name="PRODUCTION REFERENCE" xml:space="preserve">
+    <value>Riferimento di produzione</value>
+  </data>
+  <data name="SENSOR CALIBRATION REQUIRED BY PREVU PANEL" xml:space="preserve">
+    <value>Calibrazione del sensore richiesta dal pannello Prevu</value>
+  </data>
+  <data name="NO MATERIAL PRESENT" xml:space="preserve">
+    <value>Nessun materiale presente</value>
+  </data>
+  <data name="HIGH CHEMICAL CONCENTRATION WARNING" xml:space="preserve">
+    <value>Avviso di alta concentrazione di sostanze chimiche</value>
+  </data>
+  <data name="LOCAL DISCONNECT OPEN" xml:space="preserve">
+    <value>Disconnessione locale aperta</value>
+  </data>
+  <data name="(PT100)" xml:space="preserve">
+    <value>(Pt100)</value>
+  </data>
+  <data name="LOW CHEMICAL CONCENTRATION WARNING" xml:space="preserve">
+    <value>Avviso di bassa concentrazione chimica</value>
+  </data>
+  <data name="(1&gt;=MIN)" xml:space="preserve">
+    <value>(1&gt;=min)</value>
+  </data>
+  <data name="(1=EXT UPSTREAM READY TO GIVE MATERIAL)" xml:space="preserve">
+    <value>(1=Ext Upstream Pronto a fornire materiale)</value>
+  </data>
+  <data name="(1=DOWNSTREAM OK TO RECEIVE)" xml:space="preserve">
+    <value>(1=A valle OK per ricevere)</value>
+  </data>
+  <data name="CONCENTRATION SENSOR OVERLOAD" xml:space="preserve">
+    <value>Sovraccarico sensore di concentrazione</value>
+  </data>
+  <data name="(1=OK)" xml:space="preserve">
+    <value>(1=Ok)</value>
+  </data>
+  <data name="(1=ENABLE)" xml:space="preserve">
+    <value>(1=Abilita)</value>
+  </data>
+  <data name="(0=OK)" xml:space="preserve">
+    <value>(0=Ok)</value>
+  </data>
+  <data name="TEMPERATURE TRANSDUCER NOT OK" xml:space="preserve">
+    <value>Trasduttore di temperatura non ok</value>
+  </data>
+  <data name="CONCENTRATION SENSOR STATUS NOT OK" xml:space="preserve">
+    <value>Stato del sensore di concentrazione non ok</value>
+  </data>
+  <data name="MINIMUM CONCENTRATION NOT OK" xml:space="preserve">
+    <value>Concentrazione minima non ok</value>
+  </data>
+  <data name="(1=&lt;MAX)" xml:space="preserve">
+    <value>(1=&lt;Massimo)</value>
+  </data>
+  <data name="LEVEL OVERLOAD" xml:space="preserve">
+    <value>Sovraccarico di livello</value>
+  </data>
+  <data name="FAULTY STATUS (INVERTER NOT RUNNING OK)" xml:space="preserve">
+    <value>Stato difettoso (l'inverter non funziona correttamente)</value>
+  </data>
+  <data name="PULL-CORD SAFETY NOT OK" xml:space="preserve">
+    <value>La sicurezza del cordino non va bene</value>
+  </data>
+  <data name="MAXIMUM PRESSURE REACHED" xml:space="preserve">
+    <value>Pressione massima raggiunta</value>
+  </data>
+  <data name="INACCURATE SENSOR READING - CALIBRATION NOT POSSIBLE (SENSOR TO BE CLEANED?)" xml:space="preserve">
+    <value>Lettura del sensore imprecisa - Calibrazione non possibile (sensore da pulire?)</value>
+  </data>
+  <data name="INACCURATE SENSOR READING (SENSOR TO BE CLEANED?)" xml:space="preserve">
+    <value>Lettura del sensore imprecisa (sensore da pulire?)</value>
+  </data>
+  <data name="(1=BRT IN AUTO MODE)" xml:space="preserve">
+    <value>(1=Brt in modalità automatica)</value>
+  </data>
+  <data name="CHANGED" xml:space="preserve">
+    <value>Cambiato</value>
+  </data>
+  <data name="EXEC_OK" xml:space="preserve">
+    <value>Exec_Ok</value>
+  </data>
+  <data name="IN_PROGR" xml:space="preserve">
+    <value>In_Progr</value>
+  </data>
+  <data name="SELECT MODE" xml:space="preserve">
+    <value>Seleziona Modalità</value>
+  </data>
+  <data name="(1=OPEN)" xml:space="preserve">
+    <value>(1=Aperto)</value>
   </data>
 </root>
