--- a/Prevu.Localization/Properties/Resources.zh.resx
+++ b/Prevu.Localization/Properties/Resources.zh.resx
@@ -1671,4 +1671,472 @@
   <data name="NAME" xml:space="preserve">
     <value>姓名</value>
   </data>
+  <data name="PRESSURE TRANSDUCER NOT OK" xml:space="preserve">
+    <value>压力传感器不正常</value>
+  </data>
+  <data name="MINIMUM FLOWRATE" xml:space="preserve">
+    <value>最小流量</value>
+  </data>
+  <data name="FLOWRATE TRANSDUCER NOT OK" xml:space="preserve">
+    <value>流量传感器不正常</value>
+  </data>
+  <data name="LEVEL NOT OK FOR PROCESS" xml:space="preserve">
+    <value>级别不适合流程</value>
+  </data>
+  <data name="SENSOR DISABLED" xml:space="preserve">
+    <value>传感器禁用</value>
+  </data>
+  <data name="EXTERNAL PLANT IS NOT OK TO GIVE MATERIAL" xml:space="preserve">
+    <value>外厂不给料</value>
+  </data>
+  <data name="DOWNSTREAM NOT OK TO RECEIVE MATERIAL" xml:space="preserve">
+    <value>下游不能接收材料</value>
+  </data>
+  <data name="MAINTENANCE REFERENCE" xml:space="preserve">
+    <value>维护参考</value>
+  </data>
+  <data name="MAXIMUM PRESSURE" xml:space="preserve">
+    <value>最大压力</value>
+  </data>
+  <data name="MINIMUM PRESSURE" xml:space="preserve">
+    <value>最小压力</value>
+  </data>
+  <data name="PROPORTIONAL GAIN" xml:space="preserve">
+    <value>比例增益</value>
+  </data>
+  <data name="INTEGRAL SAMPLE TIME" xml:space="preserve">
+    <value>积分采样时间</value>
+  </data>
+  <data name="INTEGRAL GAIN (0=DISABLE INTEGRAL)" xml:space="preserve">
+    <value>积分增益（0=禁用积分）</value>
+  </data>
+  <data name="MINIMUM OUTPUT OF REGULATION" xml:space="preserve">
+    <value>最小调节输出</value>
+  </data>
+  <data name="MAXIMUM CONTRIBUTION OF PROPORTIONAL" xml:space="preserve">
+    <value>最大贡献比例</value>
+  </data>
+  <data name="MAXIMUM CONTRIBUTION OF INTEGRAL" xml:space="preserve">
+    <value>积分的最大贡献</value>
+  </data>
+  <data name="DELTA OVER SETPOINT TO STOP HEATING" xml:space="preserve">
+    <value>Delta Over Setpoint 停止加热</value>
+  </data>
+  <data name="DELTA BELOW SETPOINT TO MAXIMIZE HEATING" xml:space="preserve">
+    <value>Delta 低于设定值以最大化加热</value>
+  </data>
+  <data name="POSITION IN PRODUCTION (IN CONSTANT MODE)" xml:space="preserve">
+    <value>生产中的位置（在恒定模式下）</value>
+  </data>
+  <data name="POSITION IN MAINTENANCE" xml:space="preserve">
+    <value>维修职位</value>
+  </data>
+  <data name="MINIMUM FLOWRATE FOR ALARM" xml:space="preserve">
+    <value>报警最小流量</value>
+  </data>
+  <data name="ACTUAL CONCENTRATION" xml:space="preserve">
+    <value>实际浓度</value>
+  </data>
+  <data name="MAXIMUM CONCENTRATION" xml:space="preserve">
+    <value>最大浓度</value>
+  </data>
+  <data name="HIGH CONCENTRATION WARNING" xml:space="preserve">
+    <value>高浓度警告</value>
+  </data>
+  <data name="LOW CONCENTRATION WARNING" xml:space="preserve">
+    <value>低浓度警告</value>
+  </data>
+  <data name="MINIMUM CONCENTRATION" xml:space="preserve">
+    <value>最低浓度</value>
+  </data>
+  <data name="TANK DISCHARGE TIME" xml:space="preserve">
+    <value>储罐卸料时间</value>
+  </data>
+  <data name="TANK HEIGHT" xml:space="preserve">
+    <value>罐高</value>
+  </data>
+  <data name="MAXIMUM FILLING TIME (0 = CONTROL BYPASS)" xml:space="preserve">
+    <value>最大填充时间（0 = 控制旁路）</value>
+  </data>
+  <data name="SEMIAUTO PUMPING TIME" xml:space="preserve">
+    <value>半自动抽水时间</value>
+  </data>
+  <data name="DISCHARGE" xml:space="preserve">
+    <value>释放</value>
+  </data>
+  <data name="MAXIMUM PAUSE TIME (0=DISCHARGE DISABLED)" xml:space="preserve">
+    <value>最大暂停时间（0=放电禁用）</value>
+  </data>
+  <data name="MINIMUM PAUSE TIME" xml:space="preserve">
+    <value>最短暂停时间</value>
+  </data>
+  <data name="FULLY CLOSED POSITION DELAY" xml:space="preserve">
+    <value>全关位延迟</value>
+  </data>
+  <data name="MOTOR STALLED OR SPEED LOSS" xml:space="preserve">
+    <value>电机停转或失速</value>
+  </data>
+  <data name="RESET FAULTS" xml:space="preserve">
+    <value>复位故障</value>
+  </data>
+  <data name="ACKNOWLEDGED FAULTS" xml:space="preserve">
+    <value>已确认的故障</value>
+  </data>
+  <data name="PRODUCTION MODE" xml:space="preserve">
+    <value>生产模式</value>
+  </data>
+  <data name="MESSAGE" xml:space="preserve">
+    <value>信息</value>
+  </data>
+  <data name="(4-20MA)" xml:space="preserve">
+    <value>(4-20Ma)</value>
+  </data>
+  <data name="MOTOR MAXIMUM AMPERAGE EXCEEDED (&gt;115% OF NOMINAL AMP FOR 15 SEC)" xml:space="preserve">
+    <value>超过电机最大电流（&gt; 115% 的标称电流，持续 15 秒）</value>
+  </data>
+  <data name="(1=ENABLED)" xml:space="preserve">
+    <value>（1=启用）</value>
+  </data>
+  <data name="SIMULATION" xml:space="preserve">
+    <value>模拟</value>
+  </data>
+  <data name="WASHING 3" xml:space="preserve">
+    <value>洗涤 3</value>
+  </data>
+  <data name="START CONDITIONS" xml:space="preserve">
+    <value>开始条件</value>
+  </data>
+  <data name="INVERTER IN LOCAL MODE" xml:space="preserve">
+    <value>本地模式下的逆变器</value>
+  </data>
+  <data name="(1=NOT PUSHED)" xml:space="preserve">
+    <value>（1=未推送）</value>
+  </data>
+  <data name="MOTOR CURRENT OVER MAXIMUM RANGE LIMIT" xml:space="preserve">
+    <value>电机电流超过最大范围限制</value>
+  </data>
+  <data name="REACTION ARM MECHANICAL OVERLOAD" xml:space="preserve">
+    <value>反作用力臂机械过载</value>
+  </data>
+  <data name="ESTOP CONTACTORS NOT OK" xml:space="preserve">
+    <value>急停接触器不正常</value>
+  </data>
+  <data name="MOTOR CURRENT TRANSDUCER BROKEN WIRE" xml:space="preserve">
+    <value>电机电流传感器断线</value>
+  </data>
+  <data name="TARE CALIBRATION NOT POSSIBLE FOR MAXIMUM WEIGHT" xml:space="preserve">
+    <value>无法对最大重量进行皮重校准</value>
+  </data>
+  <data name="WEIGHT TRANSDUCER NOT OK" xml:space="preserve">
+    <value>体重传感器不好</value>
+  </data>
+  <data name="MAXIMUM REFILL TIME" xml:space="preserve">
+    <value>最长补充时间</value>
+  </data>
+  <data name="MOTOR MINIMUM AMPERAGE NOT REACHED (5% OF NOMINAL AMP)" xml:space="preserve">
+    <value>未达到电机最小安培数（额定安培数的 5%）</value>
+  </data>
+  <data name="SAFETIES NOT OK" xml:space="preserve">
+    <value>安全性不好</value>
+  </data>
+  <data name="POSITION OPEN NOT OK" xml:space="preserve">
+    <value>未平仓头寸</value>
+  </data>
+  <data name="POSITION CLOSED NOT OK" xml:space="preserve">
+    <value>头寸关闭不好</value>
+  </data>
+  <data name="MOTOR OVERHEAT" xml:space="preserve">
+    <value>电机过热</value>
+  </data>
+  <data name="CLOSED POSITION NOT OK" xml:space="preserve">
+    <value>平仓位置不好</value>
+  </data>
+  <data name="BOTH VALVES ARE NOT FULLY CLOSED - TANK EMPTIYNG!" xml:space="preserve">
+    <value>两个阀门都没有完全关闭 - 油箱清空！</value>
+  </data>
+  <data name="RETURN VALUE" xml:space="preserve">
+    <value>返回值</value>
+  </data>
+  <data name="COMMAND" xml:space="preserve">
+    <value>命令</value>
+  </data>
+  <data name="DISABLE SENSOR" xml:space="preserve">
+    <value>禁用传感器</value>
+  </data>
+  <data name="DELAY FOR MESSAGE 'NO MATERIAL' (0=NO MESSAGE)" xml:space="preserve">
+    <value>消息“无材料”的延迟（0 = 无消息）</value>
+  </data>
+  <data name="SET MAXIMUM LEVEL" xml:space="preserve">
+    <value>设置最高级别</value>
+  </data>
+  <data name="SET MINIMUM LEVEL" xml:space="preserve">
+    <value>设置最低级别</value>
+  </data>
+  <data name="WATER TO COMPENSATE WITH A FULL BATCH" xml:space="preserve">
+    <value>用整批补水</value>
+  </data>
+  <data name="CAUSTIC - TARGET" xml:space="preserve">
+    <value>苛性 - 目标</value>
+  </data>
+  <data name="LATEST ADDITION" xml:space="preserve">
+    <value>最新添加</value>
+  </data>
+  <data name="GAP WATER - TARGET" xml:space="preserve">
+    <value>间隙水 - 目标</value>
+  </data>
+  <data name="DETERGENT - TARGET" xml:space="preserve">
+    <value>洗涤剂 - 目标</value>
+  </data>
+  <data name="FINAL WATER LATEST ADDITION" xml:space="preserve">
+    <value>最终水最新添加</value>
+  </data>
+  <data name="ENABLE DOSING BY TIME" xml:space="preserve">
+    <value>启用按时间给药</value>
+  </data>
+  <data name="TARE CALIBRATION REQUEST" xml:space="preserve">
+    <value>皮重校准请求</value>
+  </data>
+  <data name="INTERLOCK TO UPSTREAM" xml:space="preserve">
+    <value>与上游联锁</value>
+  </data>
+  <data name="DISABLED IN PRODUCTION (CONSTANT MODE ON)" xml:space="preserve">
+    <value>在生产中禁用（恒定模式开启）</value>
+  </data>
+  <data name="ACTUAL P-I REGULATION OUTPUT" xml:space="preserve">
+    <value>实际 P-I 调节输出</value>
+  </data>
+  <data name="ENABLE IN MAINTENANCE" xml:space="preserve">
+    <value>在维护中启用</value>
+  </data>
+  <data name="TOTALIZED FLOWRATE" xml:space="preserve">
+    <value>累计流量</value>
+  </data>
+  <data name="RESET TOTALIZER" xml:space="preserve">
+    <value>重置累加器</value>
+  </data>
+  <data name="VIEW MESSAGE" xml:space="preserve">
+    <value>查看留言</value>
+  </data>
+  <data name="ALARM VIEW" xml:space="preserve">
+    <value>警报视图</value>
+  </data>
+  <data name="ENABLE HIGH RESTART SPEED" xml:space="preserve">
+    <value>启用高重启速度</value>
+  </data>
+  <data name="ENABLE SEMIAUTO PUMPING MODE" xml:space="preserve">
+    <value>启用半自动泵送模式</value>
+  </data>
+  <data name="REMAINING PUMPING TIME" xml:space="preserve">
+    <value>剩余泵送时间</value>
+  </data>
+  <data name="REAMINING  PAUSE TIME" xml:space="preserve">
+    <value>复习暂停时间</value>
+  </data>
+  <data name="LEAVE TOP VALVE OPEN DURING PAUSE TIME" xml:space="preserve">
+    <value>在暂停期间保持顶部阀门打开</value>
+  </data>
+  <data name="SINGLE CYCLE REQUEST (IN PRODUCTION MODE)" xml:space="preserve">
+    <value>单周期请求（在生产模式下）</value>
+  </data>
+  <data name="KEEP THE VALVES ON IN FINAL POSITION" xml:space="preserve">
+    <value>将阀门保持在最终位置</value>
+  </data>
+  <data name="ENABLE LATCH OF CLOSED POSITION" xml:space="preserve">
+    <value>启用关闭位置锁存器</value>
+  </data>
+  <data name="BYPASS DEVICE" xml:space="preserve">
+    <value>旁路设备</value>
+  </data>
+  <data name="PLC IN SIMULATION" xml:space="preserve">
+    <value>模拟中的PLC</value>
+  </data>
+  <data name="HOPPER EMPTY" xml:space="preserve">
+    <value>料斗空</value>
+  </data>
+  <data name="INVERTER GENERAL ALARM" xml:space="preserve">
+    <value>逆变器通用报警</value>
+  </data>
+  <data name="INVERTER ALARM PRESENT" xml:space="preserve">
+    <value>逆变器报警存在</value>
+  </data>
+  <data name="THERMAL OVERLOAD" xml:space="preserve">
+    <value>热过载</value>
+  </data>
+  <data name="MAXIMUM LEVEL REACHED" xml:space="preserve">
+    <value>达到最高水平</value>
+  </data>
+  <data name="LEVEL TRANSDUCER NOT OK" xml:space="preserve">
+    <value>液位传感器不正常</value>
+  </data>
+  <data name="VALVE IS NOT MOVING" xml:space="preserve">
+    <value>阀门不动</value>
+  </data>
+  <data name="PLC OK CONTACT NOT OK" xml:space="preserve">
+    <value>Plc 好的 联系不好</value>
+  </data>
+  <data name="MAXIMUM CONCENTRATION REACHED" xml:space="preserve">
+    <value>达到最大浓度</value>
+  </data>
+  <data name="VALVE CLOSED" xml:space="preserve">
+    <value>阀门关闭</value>
+  </data>
+  <data name="INFO PANEL" xml:space="preserve">
+    <value>信息面板</value>
+  </data>
+  <data name="PROTECTED IMAGE" xml:space="preserve">
+    <value>受保护的图像</value>
+  </data>
+  <data name="PAUSE TIME (0 = ALWAYS ON)" xml:space="preserve">
+    <value>暂停时间（0 = 始终开启）</value>
+  </data>
+  <data name="ON TIME (0 = ALWAYS OFF)" xml:space="preserve">
+    <value>开启时间（0 = 始终关闭）</value>
+  </data>
+  <data name="DEVICE CONTROL" xml:space="preserve">
+    <value>设备控制</value>
+  </data>
+  <data name="ACTUAL NON-COMPENSATED WATER" xml:space="preserve">
+    <value>实际未补偿水</value>
+  </data>
+  <data name="DRY CAUSTIC CONCENTRATION" xml:space="preserve">
+    <value>干碱浓度</value>
+  </data>
+  <data name="DRY CAUSTIC CONCENTRATION OFFSET ADJUST" xml:space="preserve">
+    <value>干碱浓度偏移调整</value>
+  </data>
+  <data name="CAUSTIC ADDITIVE DILUTION" xml:space="preserve">
+    <value>苛性碱添加剂稀释</value>
+  </data>
+  <data name="DETERGENT CONCENTRATION" xml:space="preserve">
+    <value>洗涤剂浓度</value>
+  </data>
+  <data name="DOSING BY TIME - CAUSTIC INJECTION TIME" xml:space="preserve">
+    <value>按时间给药 - 苛性碱注入时间</value>
+  </data>
+  <data name="DOSING BY TIME - GAP WATER INJECTION TIME" xml:space="preserve">
+    <value>按时间加药 - 间隙注水时间</value>
+  </data>
+  <data name="DOSING BY TIME - DETERGENT INJECTION TIME" xml:space="preserve">
+    <value>按时间给药 - 洗涤剂注射时间</value>
+  </data>
+  <data name="MAXIMUM LEVEL VALUE" xml:space="preserve">
+    <value>最大水平值</value>
+  </data>
+  <data name="MINIMUM LEVEL VALUE" xml:space="preserve">
+    <value>最低水平值</value>
+  </data>
+  <data name="STOP SILO FILLING" xml:space="preserve">
+    <value>停止筒仓填充</value>
+  </data>
+  <data name="RESTART SILO FILLING" xml:space="preserve">
+    <value>重启筒仓灌装</value>
+  </data>
+  <data name="EMPTY SILO" xml:space="preserve">
+    <value>空筒仓</value>
+  </data>
+  <data name="STOP MATERIAL" xml:space="preserve">
+    <value>停止材料</value>
+  </data>
+  <data name="START MATERIAL" xml:space="preserve">
+    <value>起始材料</value>
+  </data>
+  <data name="OBSTRUCTION MINIMUM CURRENT" xml:space="preserve">
+    <value>阻塞最小电流</value>
+  </data>
+  <data name="EMPTYING TIME BELOW MINIMUM LEVEL" xml:space="preserve">
+    <value>排空时间低于最低水平</value>
+  </data>
+  <data name="ACTUAL REFERENCE" xml:space="preserve">
+    <value>实际参考</value>
+  </data>
+  <data name="PRODUCTION REFERENCE" xml:space="preserve">
+    <value>生产参考</value>
+  </data>
+  <data name="SENSOR CALIBRATION REQUIRED BY PREVU PANEL" xml:space="preserve">
+    <value>Prevu 面板所需的传感器校准</value>
+  </data>
+  <data name="NO MATERIAL PRESENT" xml:space="preserve">
+    <value>没有材料存在</value>
+  </data>
+  <data name="HIGH CHEMICAL CONCENTRATION WARNING" xml:space="preserve">
+    <value>高化学浓度警告</value>
+  </data>
+  <data name="LOCAL DISCONNECT OPEN" xml:space="preserve">
+    <value>本地断开打开</value>
+  </data>
+  <data name="(PT100)" xml:space="preserve">
+    <value>(Pt100)</value>
+  </data>
+  <data name="LOW CHEMICAL CONCENTRATION WARNING" xml:space="preserve">
+    <value>低化学浓度警告</value>
+  </data>
+  <data name="(1&gt;=MIN)" xml:space="preserve">
+    <value>(1&gt;=最小)</value>
+  </data>
+  <data name="(1=EXT UPSTREAM READY TO GIVE MATERIAL)" xml:space="preserve">
+    <value>（1=Ext Upstream 准备提供材料）</value>
+  </data>
+  <data name="(1=DOWNSTREAM OK TO RECEIVE)" xml:space="preserve">
+    <value>（1=下游可以接收）</value>
+  </data>
+  <data name="CONCENTRATION SENSOR OVERLOAD" xml:space="preserve">
+    <value>浓度传感器过载</value>
+  </data>
+  <data name="(1=OK)" xml:space="preserve">
+    <value>（1=好的）</value>
+  </data>
+  <data name="(1=ENABLE)" xml:space="preserve">
+    <value>（1=启用）</value>
+  </data>
+  <data name="(0=OK)" xml:space="preserve">
+    <value>（0=好的）</value>
+  </data>
+  <data name="TEMPERATURE TRANSDUCER NOT OK" xml:space="preserve">
+    <value>温度传感器不正常</value>
+  </data>
+  <data name="CONCENTRATION SENSOR STATUS NOT OK" xml:space="preserve">
+    <value>浓度传感器状态不正常</value>
+  </data>
+  <data name="MINIMUM CONCENTRATION NOT OK" xml:space="preserve">
+    <value>最低浓度不好</value>
+  </data>
+  <data name="(1=&lt;MAX)" xml:space="preserve">
+    <value>(1=&lt;最大值)</value>
+  </data>
+  <data name="LEVEL OVERLOAD" xml:space="preserve">
+    <value>电平过载</value>
+  </data>
+  <data name="FAULTY STATUS (INVERTER NOT RUNNING OK)" xml:space="preserve">
+    <value>故障状态（逆变器未正常运行）</value>
+  </data>
+  <data name="PULL-CORD SAFETY NOT OK" xml:space="preserve">
+    <value>拉线安全不好</value>
+  </data>
+  <data name="MAXIMUM PRESSURE REACHED" xml:space="preserve">
+    <value>达到的最大压力</value>
+  </data>
+  <data name="INACCURATE SENSOR READING - CALIBRATION NOT POSSIBLE (SENSOR TO BE CLEANED?)" xml:space="preserve">
+    <value>传感器读数不准确 - 无法进行校准（要清洁传感器？）</value>
+  </data>
+  <data name="INACCURATE SENSOR READING (SENSOR TO BE CLEANED?)" xml:space="preserve">
+    <value>传感器读数不准确（要清洁传感器？）</value>
+  </data>
+  <data name="(1=BRT IN AUTO MODE)" xml:space="preserve">
+    <value>（1=自动模式下的Brt）</value>
+  </data>
+  <data name="CHANGED" xml:space="preserve">
+    <value>改变了</value>
+  </data>
+  <data name="EXEC_OK" xml:space="preserve">
+    <value>Exec_Ok</value>
+  </data>
+  <data name="IN_PROGR" xml:space="preserve">
+    <value>In_Progr</value>
+  </data>
+  <data name="SELECT MODE" xml:space="preserve">
+    <value>选择模式</value>
+  </data>
+  <data name="(1=OPEN)" xml:space="preserve">
+    <value>（1=打开）</value>
+  </data>
 </root>
