--- a/Prevu.Localization/Properties/Resources.ar.resx
+++ b/Prevu.Localization/Properties/Resources.ar.resx
@@ -2136,4 +2136,73 @@
   <data name="(1=OPEN)" xml:space="preserve">
     <value>(1 = مفتوح)</value>
   </data>
+  <data name="DEVICE LABELS" xml:space="preserve">
+    <value>تسميات الجهاز</value>
+  </data>
+  <data name="DISABLED" xml:space="preserve">
+    <value>عاجز</value>
+  </data>
+  <data name="READY" xml:space="preserve">
+    <value>مستعد</value>
+  </data>
+  <data name="STARTING" xml:space="preserve">
+    <value>بدء</value>
+  </data>
+  <data name="RUNNING" xml:space="preserve">
+    <value>ادارة</value>
+  </data>
+  <data name="WITH MINOR ALARM" xml:space="preserve">
+    <value>مع إنذار طفيف</value>
+  </data>
+  <data name="WITH CRITICAL ALARM" xml:space="preserve">
+    <value>مع إنذار حرج</value>
+  </data>
+  <data name="WITH MESSAGE" xml:space="preserve">
+    <value>مع الرسالة</value>
+  </data>
+  <data name="IN PREPARATION" xml:space="preserve">
+    <value>قيد التحضير</value>
+  </data>
+  <data name="COMMUNICATION ERROR" xml:space="preserve">
+    <value>خطأ في الاتصال</value>
+  </data>
+  <data name="JUMP LABEL" xml:space="preserve">
+    <value>القفز التسمية</value>
+  </data>
+  <data name="SUBZONE LABELS" xml:space="preserve">
+    <value>تسميات المنطقة الفرعية</value>
+  </data>
+  <data name="STOP PENDING" xml:space="preserve">
+    <value>التوقف عن الانتظار</value>
+  </data>
+  <data name="STOP IN PROGRESS" xml:space="preserve">
+    <value>توقف قيد التقدم</value>
+  </data>
+  <data name="GROUP LABELS" xml:space="preserve">
+    <value>تسميات المجموعة</value>
+  </data>
+  <data name="WAITING" xml:space="preserve">
+    <value>انتظار</value>
+  </data>
+  <data name="MAINTENANCE WITH COMPONENTS RUNNING" xml:space="preserve">
+    <value>الصيانة مع تشغيل المكونات</value>
+  </data>
+  <data name="PREPARATION" xml:space="preserve">
+    <value>تحضير</value>
+  </data>
+  <data name="PIPES" xml:space="preserve">
+    <value>أنابيب</value>
+  </data>
+  <data name="MATERIAL" xml:space="preserve">
+    <value>مواد</value>
+  </data>
+  <data name="WATER" xml:space="preserve">
+    <value>ماء</value>
+  </data>
+  <data name="SECONDARY" xml:space="preserve">
+    <value>ثانوي</value>
+  </data>
+  <data name="WITH DIRECTION" xml:space="preserve">
+    <value>مع الاتجاه</value>
+  </data>
 </root>
