--- a/Prevu.Localization/Properties/Resources.de.resx
+++ b/Prevu.Localization/Properties/Resources.de.resx
@@ -2139,4 +2139,73 @@
   <data name="(1=OPEN)" xml:space="preserve">
     <value>(1=offen)</value>
   </data>
+  <data name="DEVICE LABELS" xml:space="preserve">
+    <value>Geräteetiketten</value>
+  </data>
+  <data name="DISABLED" xml:space="preserve">
+    <value>Deaktiviert</value>
+  </data>
+  <data name="READY" xml:space="preserve">
+    <value>Bereit</value>
+  </data>
+  <data name="STARTING" xml:space="preserve">
+    <value>Beginnend</value>
+  </data>
+  <data name="RUNNING" xml:space="preserve">
+    <value>Betrieb</value>
+  </data>
+  <data name="WITH MINOR ALARM" xml:space="preserve">
+    <value>Mit kleinem Alarm</value>
+  </data>
+  <data name="WITH CRITICAL ALARM" xml:space="preserve">
+    <value>Mit kritischem Alarm</value>
+  </data>
+  <data name="WITH MESSAGE" xml:space="preserve">
+    <value>Mit Nachricht</value>
+  </data>
+  <data name="IN PREPARATION" xml:space="preserve">
+    <value>In Vorbereitung</value>
+  </data>
+  <data name="COMMUNICATION ERROR" xml:space="preserve">
+    <value>Kommunikationsfehler</value>
+  </data>
+  <data name="JUMP LABEL" xml:space="preserve">
+    <value>Sprungmarke</value>
+  </data>
+  <data name="SUBZONE LABELS" xml:space="preserve">
+    <value>Subzone-Etiketten</value>
+  </data>
+  <data name="STOP PENDING" xml:space="preserve">
+    <value>Stoppen Sie ausstehend</value>
+  </data>
+  <data name="STOP IN PROGRESS" xml:space="preserve">
+    <value>Laufend stoppen</value>
+  </data>
+  <data name="GROUP LABELS" xml:space="preserve">
+    <value>Gruppenetiketten</value>
+  </data>
+  <data name="WAITING" xml:space="preserve">
+    <value>Warten</value>
+  </data>
+  <data name="MAINTENANCE WITH COMPONENTS RUNNING" xml:space="preserve">
+    <value>Wartung bei laufenden Komponenten</value>
+  </data>
+  <data name="PREPARATION" xml:space="preserve">
+    <value>Vorbereitung</value>
+  </data>
+  <data name="PIPES" xml:space="preserve">
+    <value>Rohre</value>
+  </data>
+  <data name="MATERIAL" xml:space="preserve">
+    <value>Material</value>
+  </data>
+  <data name="WATER" xml:space="preserve">
+    <value>Wasser</value>
+  </data>
+  <data name="SECONDARY" xml:space="preserve">
+    <value>Sekundär</value>
+  </data>
+  <data name="WITH DIRECTION" xml:space="preserve">
+    <value>Mit Richtung</value>
+  </data>
 </root>
