--- a/Prevu.Localization/Properties/Resources.it.resx
+++ b/Prevu.Localization/Properties/Resources.it.resx
@@ -1722,4 +1722,73 @@
   <data name="(1=OPEN)" xml:space="preserve">
     <value>(1=Aperto)</value>
   </data>
+  <data name="DEVICE LABELS" xml:space="preserve">
+    <value>Etichette dispositivo</value>
+  </data>
+  <data name="DISABLED" xml:space="preserve">
+    <value>Disabilitato</value>
+  </data>
+  <data name="READY" xml:space="preserve">
+    <value>Pronto</value>
+  </data>
+  <data name="STARTING" xml:space="preserve">
+    <value>Di partenza</value>
+  </data>
+  <data name="RUNNING" xml:space="preserve">
+    <value>In esecuzione</value>
+  </data>
+  <data name="WITH MINOR ALARM" xml:space="preserve">
+    <value>Con piccolo allarme</value>
+  </data>
+  <data name="WITH CRITICAL ALARM" xml:space="preserve">
+    <value>Con allarme critico</value>
+  </data>
+  <data name="WITH MESSAGE" xml:space="preserve">
+    <value>Con messaggio</value>
+  </data>
+  <data name="IN PREPARATION" xml:space="preserve">
+    <value>In preparazione</value>
+  </data>
+  <data name="COMMUNICATION ERROR" xml:space="preserve">
+    <value>Errore di comunicazione</value>
+  </data>
+  <data name="JUMP LABEL" xml:space="preserve">
+    <value>Salta etichetta</value>
+  </data>
+  <data name="SUBZONE LABELS" xml:space="preserve">
+    <value>Etichette di sottozona</value>
+  </data>
+  <data name="STOP PENDING" xml:space="preserve">
+    <value>Smetti di essere in attesa</value>
+  </data>
+  <data name="STOP IN PROGRESS" xml:space="preserve">
+    <value>Fermata in corso</value>
+  </data>
+  <data name="GROUP LABELS" xml:space="preserve">
+    <value>Etichette di gruppo</value>
+  </data>
+  <data name="WAITING" xml:space="preserve">
+    <value>In attesa</value>
+  </data>
+  <data name="MAINTENANCE WITH COMPONENTS RUNNING" xml:space="preserve">
+    <value>Manutenzione con componenti in esecuzione</value>
+  </data>
+  <data name="PREPARATION" xml:space="preserve">
+    <value>Preparazione</value>
+  </data>
+  <data name="PIPES" xml:space="preserve">
+    <value>Tubi</value>
+  </data>
+  <data name="MATERIAL" xml:space="preserve">
+    <value>Materiale</value>
+  </data>
+  <data name="WATER" xml:space="preserve">
+    <value>Acqua</value>
+  </data>
+  <data name="SECONDARY" xml:space="preserve">
+    <value>Secondario</value>
+  </data>
+  <data name="WITH DIRECTION" xml:space="preserve">
+    <value>Con Direzione</value>
+  </data>
 </root>
