--- a/Prevu.Localization/Properties/Resources.resx
+++ b/Prevu.Localization/Properties/Resources.resx
@@ -2579,4 +2579,73 @@
   <data name="(1=OPEN)" xml:space="preserve">
     <value>(1=Open)</value>
   </data>
+  <data name="DEVICE LABELS" xml:space="preserve">
+    <value>Device Labels</value>
+  </data>
+  <data name="DISABLED" xml:space="preserve">
+    <value>Disabled</value>
+  </data>
+  <data name="READY" xml:space="preserve">
+    <value>Ready</value>
+  </data>
+  <data name="STARTING" xml:space="preserve">
+    <value>Starting</value>
+  </data>
+  <data name="RUNNING" xml:space="preserve">
+    <value>Running</value>
+  </data>
+  <data name="WITH MINOR ALARM" xml:space="preserve">
+    <value>With Minor Alarm</value>
+  </data>
+  <data name="WITH CRITICAL ALARM" xml:space="preserve">
+    <value>With Critical Alarm</value>
+  </data>
+  <data name="WITH MESSAGE" xml:space="preserve">
+    <value>With Message</value>
+  </data>
+  <data name="IN PREPARATION" xml:space="preserve">
+    <value>In Preparation</value>
+  </data>
+  <data name="COMMUNICATION ERROR" xml:space="preserve">
+    <value>Communication Error</value>
+  </data>
+  <data name="JUMP LABEL" xml:space="preserve">
+    <value>Jump Label</value>
+  </data>
+  <data name="SUBZONE LABELS" xml:space="preserve">
+    <value>Subzone Labels</value>
+  </data>
+  <data name="STOP PENDING" xml:space="preserve">
+    <value>Stop Pending</value>
+  </data>
+  <data name="STOP IN PROGRESS" xml:space="preserve">
+    <value>Stop In Progress</value>
+  </data>
+  <data name="GROUP LABELS" xml:space="preserve">
+    <value>Group Labels</value>
+  </data>
+  <data name="WAITING" xml:space="preserve">
+    <value>Waiting</value>
+  </data>
+  <data name="MAINTENANCE WITH COMPONENTS RUNNING" xml:space="preserve">
+    <value>Maintenance With Components Running</value>
+  </data>
+  <data name="PREPARATION" xml:space="preserve">
+    <value>Preparation</value>
+  </data>
+  <data name="PIPES" xml:space="preserve">
+    <value>Pipes</value>
+  </data>
+  <data name="MATERIAL" xml:space="preserve">
+    <value>Material</value>
+  </data>
+  <data name="WATER" xml:space="preserve">
+    <value>Water</value>
+  </data>
+  <data name="SECONDARY" xml:space="preserve">
+    <value>Secondary</value>
+  </data>
+  <data name="WITH DIRECTION" xml:space="preserve">
+    <value>With Direction</value>
+  </data>
 </root>
