--- a/Prevu.Localization/Properties/Resources.zh.resx
+++ b/Prevu.Localization/Properties/Resources.zh.resx
@@ -2139,4 +2139,73 @@
   <data name="(1=OPEN)" xml:space="preserve">
     <value>（1=打开）</value>
   </data>
+  <data name="DEVICE LABELS" xml:space="preserve">
+    <value>设备标签</value>
+  </data>
+  <data name="DISABLED" xml:space="preserve">
+    <value>已禁用</value>
+  </data>
+  <data name="READY" xml:space="preserve">
+    <value>准备好</value>
+  </data>
+  <data name="STARTING" xml:space="preserve">
+    <value>开始</value>
+  </data>
+  <data name="RUNNING" xml:space="preserve">
+    <value>跑步</value>
+  </data>
+  <data name="WITH MINOR ALARM" xml:space="preserve">
+    <value>带轻微警报</value>
+  </data>
+  <data name="WITH CRITICAL ALARM" xml:space="preserve">
+    <value>带有严重警报</value>
+  </data>
+  <data name="WITH MESSAGE" xml:space="preserve">
+    <value>带留言</value>
+  </data>
+  <data name="IN PREPARATION" xml:space="preserve">
+    <value>在筹备</value>
+  </data>
+  <data name="COMMUNICATION ERROR" xml:space="preserve">
+    <value>通信故障</value>
+  </data>
+  <data name="JUMP LABEL" xml:space="preserve">
+    <value>跳转标签</value>
+  </data>
+  <data name="SUBZONE LABELS" xml:space="preserve">
+    <value>分区标签</value>
+  </data>
+  <data name="STOP PENDING" xml:space="preserve">
+    <value>停止挂起</value>
+  </data>
+  <data name="STOP IN PROGRESS" xml:space="preserve">
+    <value>停止进行中</value>
+  </data>
+  <data name="GROUP LABELS" xml:space="preserve">
+    <value>组标签</value>
+  </data>
+  <data name="WAITING" xml:space="preserve">
+    <value>等待</value>
+  </data>
+  <data name="MAINTENANCE WITH COMPONENTS RUNNING" xml:space="preserve">
+    <value>组件运行时的维护</value>
+  </data>
+  <data name="PREPARATION" xml:space="preserve">
+    <value>准备</value>
+  </data>
+  <data name="PIPES" xml:space="preserve">
+    <value>管道</value>
+  </data>
+  <data name="MATERIAL" xml:space="preserve">
+    <value>材料</value>
+  </data>
+  <data name="WATER" xml:space="preserve">
+    <value>水</value>
+  </data>
+  <data name="SECONDARY" xml:space="preserve">
+    <value>中学</value>
+  </data>
+  <data name="WITH DIRECTION" xml:space="preserve">
+    <value>有方向</value>
+  </data>
 </root>
