--- a/Prevu.Localization/Properties/Resources.it.resx
+++ b/Prevu.Localization/Properties/Resources.it.resx
@@ -1791,4 +1791,10 @@
   <data name="WITH DIRECTION" xml:space="preserve">
     <value>Con Direzione</value>
   </data>
+  <data name="HIGH SPEED" xml:space="preserve">
+    <value>Alta Velocità</value>
+  </data>
+  <data name="LOW SPEED" xml:space="preserve">
+    <value>Bassa Velocità</value>
+  </data>
 </root>
