--- a/Prevu.Localization/Properties/Resources.resx
+++ b/Prevu.Localization/Properties/Resources.resx
@@ -2648,4 +2648,10 @@
   <data name="WITH DIRECTION" xml:space="preserve">
     <value>With Direction</value>
   </data>
+  <data name="HIGH SPEED" xml:space="preserve">
+    <value>High Speed</value>
+  </data>
+  <data name="LOW SPEED" xml:space="preserve">
+    <value>Low Speed</value>
+  </data>
 </root>
